--- a/(2017) The Summer Grass Is Getting In My Way/02. Cattleya.md
+++ b/(2017) The Summer Grass Is Getting In My Way/02. Cattleya.md
@@ -1,7 +1,7 @@
 カトレア | Cattleya
-#### [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/01/16/yorushika-cattleya/)
+#### Lyrics
 
-| Japanese                                              | Romanji                                                                                                                 | English                                                                                                                                                                 |
+| Japanese                                              | Romanji                                                                                                                 | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/01/16/yorushika-cattleya/)                                                                                   |
 | ----------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 貴方にはわからないよ、なんてのは傲慢だ<br><br>排気ガス塗れの東京を練り行く             | anata ni wa wakaranai yo, nante no wa gouman da<br><br>haiki GASU mamire no Toukyou o neriyuku<br>                      | To say “You couldn’t possibly understand” is so arrogant<br><br>I tread on through an exhaust fume-laden Tokyo.                                                         |
 | 札束で心が買えるなら本望だ<br><br>傷一つない新しい心にして                     | satsutaba de kokoro ga kaeru nara honmou da.<br><br>kizu hitotsu nai atarashii kokoro ni shite                          | I long to buy a heart with a wad of bills.<br><br>I would buy a new one, free from any wounds                                                                           |
