--- a/(2017) The Summer Grass Is Getting In My Way/03. Say it.md
+++ b/(2017) The Summer Grass Is Getting In My Way/03. Say it.md
@@ -1,7 +1,7 @@
 言って。 | Itte.
-#### [EJ/bluepenguin](https://ejtranslations.wordpress.com/2017/12/13/yorushika-itte/)
+#### Lyrics
 
-| Japanese                                                     | Romanji                                                                                                                             | English                                                                                                                                           |
+| Japanese                                                     | Romanji                                                                                                                             | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2017/12/13/yorushika-itte/)                                                                 |
 | ------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 言って                                                          | itte                                                                                                                                | Say it                                                                                                                                            |
 | あのね、私実は気付いてるの<br><br>ほら、君がいったこと                              | ano ne, watashi jitsu wa kidzuite’ru no<br><br>hora, kimi ga itta koto                                                              | You see, I’ve actually realized already<br><br>Look, about that thing you said                                                                    |
