--- a/(2017) The Summer Grass Is Getting In My Way/04. Blooming in That Summer.md
+++ b/(2017) The Summer Grass Is Getting In My Way/04. Blooming in That Summer.md
@@ -1,7 +1,7 @@
 あの夏に咲け | Ano Natsu ni Sake
-#### [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/01/30/yorushika-ano-natsu-ni-sake/)
+#### Lyrics
 
-| Japanese                                                                                                | Romanji                                                                                                                                                                                                                      | English                                                                                                                                                                                                                                       |
+| Japanese                                                                                                | Romanji                                                                                                                                                                                                                      | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/01/30/yorushika-ano-natsu-ni-sake/)                                                                                                                                                |
 | ------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 君が触れたら、た、た、ただの花さえ笑って宙に咲け<br><br>君に倣って、て、照れるまま座って<br><br>バスの最終時刻 オーバー                                    | kimi ga furetara, ta, ta, tada no hana sae waratte chuu ni sake<br><br>kimi ni naratte, te, tereru mama suwatte<br><br>BASU no saishuu jikoku OOBAA                                                                          | If I could touch you, e- e- even an ordinary flower would smile and bloom in midair<br><br>Imitating you, you, sitting there embarrassed<br><br>The time for the last bus is over[[#^1]]                                                      |
 | いつもの通りバス亭で、君はサイダーを持っていた<br><br>それだって様になってるなあ<br><br>しがない物書きであった僕はその風景を描いていた<br><br>隣に座る間も無く消えた。バスが走っていく | itsumo no toori BASUtei de, kimi wa SAIDAA o motte ita<br><br>sore datte sama ni natte’ru naa<br><br>shiganai monokaki de atta boku wa sono fuukei o kaite ita<br><br>tonari ni suwaru ma mo naku kieta BASU ga hashitte iku | At the usual bus stop, you were holding a cider<br><br>Even that makes you look good<br><br>I, a writer of no great talent, was picturing the scenery<br><br>You, sitting beside me, disappeared in the blink of an eye; the bus drives away. |
