--- a/(2017) The Summer Grass Is Getting In My Way/06. Fireworks Beneath My Shoes.md
+++ b/(2017) The Summer Grass Is Getting In My Way/06. Fireworks Beneath My Shoes.md
@@ -1,7 +1,7 @@
 靴の花火 | Kutsu no Hanabi
-#### [EJ/bluepenguin](https://ejtranslations.wordpress.com/2017/12/19/yorushika-kutsu-no-hanabi/)
+#### Lyrics
 
-| Japanese                                                              | Romanji                                                                                                                                          | English                                                                                                                                                                                             |
+| Japanese                                                              | Romanji                                                                                                                                          | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2017/12/19/yorushika-kutsu-no-hanabi/)                                                                                                        |
 | --------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | ねぇ ねぇ<br><br>何か言おうにも言葉足らずだ<br><br>空いた口が塞がらないから から                     | nee nee<br><br>nanika iou ni mo kotoba tarazu da<br><br>aita kuchi ga fusagaranai kara kara                                                      | Look, look,<br><br>I don’t have the words to say anything<br><br>Because, because I’ve been left open-mouthed                                                                                       |
 | ねぇ ねぇ<br><br>黙りこくっても言葉要らずだ<br><br>目って物を言うから<br>                       | nee nee<br><br>damarikokutte mo kotoba irazu da<br><br>me tte mono o iu kara                                                                     | Look, look,<br><br>Even if I stay silent, words aren’t necessary<br><br>Because my eyes will speak for me                                                                                           |
