--- a/(2017) The Summer Grass Is Getting In My Way/07. The Clouds and the Ghost.md
+++ b/(2017) The Summer Grass Is Getting In My Way/07. The Clouds and the Ghost.md
@@ -1,7 +1,7 @@
 雲と幽霊 | Kumo to Yuurei
-####  [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/02/04/yorushika-kumo-to-yuurei/)
+####  Lyrics
 
-| Japanese                                                      | Romanji                                                                                                                  | English                                                                                                                                                              |
+| Japanese                                                      | Romanji                                                                                                                  | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/02/04/yorushika-kumo-to-yuurei/)                                                                          |
 | ------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 幽霊になった僕は、明日遠くの君を見に行くんだ<br><br>その後はどうしよう<br><br>きっと君には言えない     | yuurei ni natta boku wa, asu tooku no kimi o mi ni yuku n’da<br><br>sono ato wa dou shiyou<br><br>kitto kimi ni wa ienai | I’ve become a ghost, and tomorrow I’ll go to see you, far away where you are<br><br>And then what shall I do?<br><br>I definitely can’t tell you that                |
 | 幽霊になった僕は、夏の終わり方を見に行くんだ<br><br>六畳の地球で　浅い木陰のバス停で                | yuurei ni natta boku wa natsu no owarikata o mi ni yuku n’da<br><br>rokujou no chikyuu de asai kokage no BASUtei de      | I’ve become a ghost, and I’m going to see the way the summer ends<br><br>On this studio-apartment-sized earth[[#^1]], at a bus stop in the pale shadows of the trees |
