--- a/(2018) A Loser Doesn’t Need An Encore/01. Past Life.md
+++ b/(2018) A Loser Doesn’t Need An Encore/01. Past Life.md
@@ -1,7 +1,7 @@
 前世 | Zense
-#### [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/06/07/yorushika-zense/)
+#### Lyrics
 
-| Japanese                                                                                                                                                                                      | English                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
+| Japanese                                                                                                                                                                                      | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/06/07/yorushika-zense/)                                                                                                                                                                                                                                                                                                                                                                       |
 | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 目の前には箱が在る。<br><br>掌に収まるほどの、角の取れた立方体で、<br><br>中に何が入っているかは見当がつかない。<br><br>足で突き転がしてみると、何かの音が聞こえた。<br><br>もう一度転がして耳を欹てると、凛とした鈴の音が残響して、確かに鳴っている。<br><br>やけに淀みのない音がしていた。<br><br>成る程、どうやら箱には鈴が入っている。 | Before my eyes was a box.<br><br>A cube with blunted corners, small enough to fit in the palm of a hand.<br><br>I had no idea what could be inside.<br><br>When I tried kicking it, I heard a sound.<br><br>I kicked it again and listened hard, and the dignified sound of a bell echoed–it was definitely ringing.<br><br>It was an incredibly smooth sound.<br><br>I see, there must be a bell inside this box.                                       |
 | 箱ならば、当然蓋が有る筈だ。足で転がして隅まで確認するものの、<br><br>どうも蓋の開くようの仕掛けは見つからない。<br><br>口を開き、箱に歯を突き立て、力を込めて噛り付く。<br><br>開かない。開かないのでまた齧る。<br><br>齧るたびに鈴の音が鳴り、それがまた期待感を煽る。                                          | It’s a box, so it must have a lid. I checked everywhere up to the corner that I’d kicked,<br><br>But I couldn’t find any mechanism for opening the lid.<br><br>I opened my mouth, got the box between my teeth, and bit down with all my might.<br><br>It didn’t open. Since it didn’t open, I bit it again.<br><br>When I bit it, the bell rang, filling me with a sense of expectation.                                                                |
