--- a/(2018) A Loser Doesn’t Need An Encore/02. A Loser Doesn't Need An Encore.md
+++ b/(2018) A Loser Doesn’t Need An Encore/02. A Loser Doesn't Need An Encore.md
@@ -1,7 +1,7 @@
 負け犬にアンコールはいらない | Makeinu ni Encore wa Iranai [[#^title]]
-#### [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/07/20/yorushika-makeinu-ni-encore-wa-iranai/)
+#### Lyrics
 
-| Japanese                                                                          | Romanji                                                                                                                                                   | English                                                                                                                                                                                    |
+| Japanese                                                                          | Romanji                                                                                                                                                   | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/07/20/yorushika-makeinu-ni-encore-wa-iranai/)                                                                                   |
 | --------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | 大人になりたくないのに何だか<br><br>どんどん擦れてしまってって<br><br>青春なんて余るほどないけど<br><br>もったいないから持っていたいのです | otona ni naritakunai no ni nandaka<br><br>dondon surete shimatte’tte<br><br>seishun nante amaru hodo nai kedo<br><br>mottainai kara motte itai no desu    | I don’t want to grow up, but somehow<br><br>I wind up steadily losing my innocence<br><br>And now I don’t have much youth left<br><br>But it’s a waste, so I want to hold onto it          |
 | 「死ぬほどあなたを愛してます」<br><br>とかそう言う奴ほど死ねません                                             | “shinu hodo anata o aishite’masu”<br><br>to ka sou iu yatsu hodo shinemasen                                                                               | No matter how much some idiot says<br><br>“I love you so much I could die,” they can’t die                                                                                                 |
