--- a/(2018) A Loser Doesn’t Need An Encore/03. Compulsive Bomber.md
+++ b/(2018) A Loser Doesn’t Need An Encore/03. Compulsive Bomber.md
@@ -1,7 +1,7 @@
 爆弾魔 | Bakudanma
-#### [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/08/22/yorushika-bakudanma/)
+#### Lyrics
 
-| Japanese                                                            | Romanji                                                                                                                                | English                                                                                                                                                 |
+| Japanese                                                            | Romanji                                                                                                                                | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/08/22/yorushika-bakudanma/)                                                                  |
 | ------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 死んだ眼で爆弾片手に口を開く<br><br>さよならだ人類、みんな吹き飛んじまえ                            | shinda me de bakudan katate ni kuchi o hiraku<br><br>sayonara da jinrui, minna fukitonjimae                                            | With dead eyes and a bomb in one hand, I open my mouth<br><br>Goodbye, humanity, I’m blowing you all away                                               |
 | 泣いた顔で爆弾片手　夜が苦しい<br><br>安っぽいナイトショーのワンシーンみたいな夢が見たい                    | naita kao de bakudan katate yoru ga kurushii<br><br>yasuppoi NAITO SHOO no WANSHIIN mitai na yume ga mitai                             | With a tear-streaked face and a bomb in one hand, nights are hard<br><br>I want to have a dream that’s like a scene from a cheap night show             |
