--- a/(2018) A Loser Doesn’t Need An Encore/04. Hitchcock.md
+++ b/(2018) A Loser Doesn’t Need An Encore/04. Hitchcock.md
@@ -1,7 +1,7 @@
 ヒッチコック | Hitchcock
-#### [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/05/15/yorushika-hitchcock/)
+#### Lyrics
 
-| Japanese                                                                                                                               | Romanji                                                                                                                                                                                                                                                                                | English                                                                                                                                                                                                                                                                                                         |
+| Japanese                                                                                                                               | Romanji                                                                                                                                                                                                                                                                                | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/05/15/yorushika-hitchcock/)                                                                                                                                                                                                                          |
 | -------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 雨の匂いに懐かしくなるのは何でなんでしょうか。<br><br>夏が近づくと胸が騒めくのは何でなんでしょうか。<br><br>人に笑われたら涙が出るのは何でなんでしょうか。<br><br>それでもいつか報われるからと思えばいいんでしょうか。」               | “Ame no nioi ni natsukashiku naru no wa nande na n’deshou ka.<br><br>Natsu ga chikadzuku to mune ga zawameku no wa nande na n’deshou ka.<br><br>Hito ni warawaretara namida ga deru no wa nande na n’deshou ka.<br><br>Soredemo itsuka mukuwareru kara to omoeba ii n’deshou ka.”      | “Why does the scent of the rain make me feel nostalgic?<br><br>Why does my heart clamor as summer approaches?<br><br>Why do I cry when people laugh at me?<br><br>Is it all right to think that even so I’ll be rewarded someday?”                                                                              |
 | さよならって言葉でこんなに胸を裂いて<br><br>今もたった数瞬の夕焼けに足が止まっていた                                                                                         | sayonara tte kotoba de konna ni mune o saite<br><br>ima mo tatta suushun no yuuyake ni ashi ga tomatte ita                                                                                                                                                                             | With the word “goodbye” tearing so much at my chest,<br><br>I was standing still for just a few moments at sunset                                                                                                                                                                                               |
