--- a/(2018) A Loser Doesn’t Need An Encore/06. Semi-transparent Boy.md
+++ b/(2018) A Loser Doesn’t Need An Encore/06. Semi-transparent Boy.md
@@ -1,7 +1,7 @@
 準透明少年 | Juntoumei Shounen
-#### [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/03/14/yorushika-juntoumei-shounen/)
+#### Lyrics
 
-| Japanese                                                             | Romanji                                                                                                                                                        | English                                                                                                                                                                                      |
+| Japanese                                                             | Romanji                                                                                                                                                        | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/03/14/yorushika-juntoumei-shounen/)                                                                                               |
 | -------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 凛として花は咲いた後でさえも揺るがなくて<br><br>今日が来る不安感も奪い取って行く                         | rin to shite hana wa saita ato de sae mo yuruganakute<br><br>kyou ga kuru fuankan mo ubaitotte yuku                                                            | Not swayed even after the dignified flower bloomed,<br><br>And with it, my anxiety about today's coming is stolen away                                                                       |
 | 正午過ぎの校庭で一人の僕は透明人間<br><br>誰かに気付いてほしくて歌っている                            | shougo sugi no koutei de hitori no boku wa toumei ningen<br><br>dareka ni kidzuite hoshikute utatte iru                                                        | Alone in the schoolyard in the afternoon, I’m a transparent person<br><br>I’m singing, wanting someone to notice me                                                                          |
