--- a/(2018) A Loser Doesn’t Need An Encore/07. Just a Sunny Day for You.md
+++ b/(2018) A Loser Doesn’t Need An Encore/07. Just a Sunny Day for You.md
@@ -1,7 +1,7 @@
 ただ君に晴れ | Tada Kimi ni Hare
-#### [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/05/11/yorushika-tada-kimi-ni-hare/)
+#### Lyrics
 
-| Japanese                                                                    | Romanji                                                                                                                                                      | English                                                                                                                                                                                               |
+| Japanese                                                                    | Romanji                                                                                                                                                      | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/05/11/yorushika-tada-kimi-ni-hare/)                                                                                                        |
 | --------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 夜に浮かんでいた<br><br>海月のような月が爆ぜた<br><br>バス停の背を覗けば<br><br>あの夏の君が頭にいる              | yoru ni ukande ita<br><br>kurage no you na tsuki ga hazeta<br><br>BASUtei no se o nozokeba<br><br>ano natsu no kimi ga atama ni iru                          | The moon that floated in the night like a jellyfish<br><br>Has split open<br><br>When I glance at the back of the bus stop<br><br>You, as you were that summer, are in my head                        |
 | だけ                                                                          | dake                                                                                                                                                         | Only                                                                                                                                                                                                  |
