--- a/(2018) A Loser Doesn’t Need An Encore/08. Hibernation.md
+++ b/(2018) A Loser Doesn’t Need An Encore/08. Hibernation.md
@@ -1,7 +1,7 @@
 冬眠 | Toumin
-#### [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/10/24/yorushika-toumin/)
+#### Lyrics
 
-| Japanese                                                                    | Romanji                                                                                                                                            | English                                                                                                                                                                            |
+| Japanese                                                                    | Romanji                                                                                                                                            | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/10/24/yorushika-toumin/)                                                                                                |
 | --------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 雨の上がる校庭で昨日の花火を思い出した<br><br>あの時の君のぼうとした顔、風にまだ夏の匂いがする                         | ame no agaru koutei de kinou no hanabi o omoidashita<br><br>ano toki no kimi no bou to shita kao, kaze ni mada natsu no nioi ga suru               | In the schoolyard after the rain, I remembered yesterday’s fireworks<br><br>The faraway look on your face back then; I could still smell summer on the wind                        |
 | 秋になって　冬になって<br><br>長い眠りについたあとに<br><br>雲に乗って　風に乗って<br><br>遠くに行こうよ　ここじゃ報われないよ | aki ni natte fuyu ni natte<br><br>nagai nemuri ni tsuita ato ni<br><br>kumo ni notte kaze ni notte<br><br>tooku ni ikou yo koko ja mukuwarenai yo  | After fall comes and winter comes<br><br>And I fall into a long sleep<br><br>Riding the clouds, riding the wind,<br><br>I’ll go far away–there’s no reward for me here             |
