--- a/(2019) Elma/04. Rain and Cappuccino.md
+++ b/(2019) Elma/04. Rain and Cappuccino.md
@@ -1,7 +1,7 @@
 雨とカプチーノ | Ame to Cappuccino
-#### [EJ/bluepenguin](https://ejtranslations.wordpress.com/2020/03/24/yorushika-ame-to-cappuccino/)
+#### Lyrics
 
-| Japanese                                                                                                            | Romanji                                                                                                                                                                                                                        | English                                                                                                                                                                                                                                                                       |
+| Japanese                                                                                                            | Romanji                                                                                                                                                                                                                        | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2020/03/24/yorushika-ame-to-cappuccino/)                                                                                                                                                                                |
 | ------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 灰色に白んだ言葉はカプチーノみたいな色してる<br><br>言い訳はいいよ 窓辺に置いてきて<br><br>数え切れないよ                                                       | haiiro ni shiranda kotoba wa KAPUCHIINO mitai na iro shite’ru<br><br>iiwake wa ii yo madobe ni oite kite<br><br>kazoekirenai yo                                                                                                | My words that had faded to grey are now a color like cappuccino<br><br>Enough of the excuses, leave them by the window<br><br>There are too many to count                                                                                                                     |
 | 灰色に白んだ心はカプチーノみたいな色してる<br><br>言い訳はいいよ 呷ろうカプチーノ<br><br>戯けた振りして                                                        | haiiro ni shiranda kokoro wa KAPUCHIINO mitai na iro shite’ru<br><br>iiwake wa ii yo aorou KAPUCHIINO<br><br>odoketa furi shite                                                                                                | My heart that had faded to grey is now a color like cappuccino<br><br>Enough of the excuses, I’ll gulp down cappuccino<br><br>And pretend to be an idiot                                                                                                                      |
