--- a/(2019) Elma/06. Dance of God.md
+++ b/(2019) Elma/06. Dance of God.md
@@ -1,7 +1,7 @@
 神様のダンス | Kami-sama no Dansu
-#### [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/)
+#### Lyrics
 
-| Japanese                                                                                             | Romanji                                                                                                                                                                                                         | English                                                                                                                                                                                                                                                                        |
+| Japanese                                                                                             | Romanji                                                                                                                                                                                                         | [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/)                                                                                                                                                                                     |
 | ---------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | 忘れるなんて酷いだろ<br><br>幸せになんてなるものか<br><br>色のない何かが咲いた<br><br>君のいない夏に咲いた                                    | wasureru nante hidoi daro<br><br>shiawase ni nante naru mono ka<br><br>iro no nao nani ka ga saita<br><br>kimi no iani natsu ni saita                                                                           | To forget is horrible right?<br><br>Will it turn into happiness? <br><br>Something devoid of colour bloomed<br><br>It bloomed in that summer without you                                                                                                                       |
 | 人に笑われたくないから<br><br>怯えるように下を向く<br><br>心より大事な何かが<br><br>あってたまるものか                                      | hito ni warawaretakunai kara<br><br>obieru yooni shita o oku<br><br>kokoro yori daiji na nani ka ga<br><br>atte tamaru mono ka                                                                                  | Not wanting people to laugh at me<br><br>I look at the ground as to scare them off<br><br>Can something more important than my heart even exist?                                                                                                                               |
