--- a/(2019) Elma/07. After the Rain.md
+++ b/(2019) Elma/07. After the Rain.md
@@ -1,7 +1,7 @@
 雨晴るる | Ame Haruru
-#### [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/)
+#### Lyrics
 
-| Japanese                                                                                                                    | Romanji                                                                                                                                                                                                                            | English                                                                                                                                                                                                                                                                                                                                           |
+| Japanese                                                                                                                    | Romanji                                                                                                                                                                                                                            | [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/)                                                                                                                                                                                                                                                        |
 | --------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | やっと雨が降ったんだ<br><br>この青をずっと思っていたんだ<br><br>心臓の音が澄んでいた<br><br>言葉以外何もいらない空だ                                                      | Yatto ame ga futta n da<br><br>Kono ao o zutto omotteita n da<br><br>Shinzō no oto ga sundeita<br><br>Kotoba igai nan ni mo iranai sora da                                                                                         | Finally, the rain fell<br><br>I’ve been thinking about this blue for a while now<br><br>The sound of my heart was clear <br><br>It’s a sky where I didn’t need anything other than words                                                                                                                                                          |
 | あの日まで僕は眠っていたんだ<br><br>言い訳ばかりで足が出なかった<br><br>想像よりずっと君がいた街の青さを   ずっと                                                          | Ano hi made boku wa nemutteita n da<br><br>Iiwake bakari de ashi ga denakatta<br><br>Sōzō yori zutto kimi ga ita machi no aosa o zutto                                                                                             | I’ve been asleep up until that day<br><br>Unwilling to take a step, making excuses<br><br>I’ll take the blue of the town you lived in for a while that’s bluer than I imagined and                                                                                                                                                                |
