--- a/(2019) Elma/08. Walk.md
+++ b/(2019) Elma/08. Walk.md
@@ -1,7 +1,7 @@
 歩く | Aruku
-#### [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/), [theyleaveshadows](https://docs.google.com/document/d/1v3jewbCoq3mP-7qKevFgUA5WSX795oqW1VDxc3zAm_c/)
+#### Lyrics
 
-| Japanese                                                                               | Romanji                                                                                                                                                                        | English                                                                                                                                                                                                                  |
+| Japanese                                                                               | Romanji                                                                                                                                                                        | [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/), [theyleaveshadows](https://docs.google.com/document/d/1v3jewbCoq3mP-7qKevFgUA5WSX795oqW1VDxc3zAm_c/)                         |
 | -------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | 今日、死んでいくような<br><br>そんな感覚があった<br><br>ただ明日を待って<br><br>流る季節を見下ろした                         | Kyō, shindeku yōna<br><br>Sonna kankaku ga atta<br><br>Tada asu o matte<br><br>Nagaru kisetsu o mioroshita                                                                     | Today, I felt the sensation<br><br>Like I was starting to die<br><br>Just waiting for tomorrow<br><br>While I looked down on the changing seasons                                                                        |
 | どうせならって思うよ<br><br>もう随分遠くに来た<br><br>何も知らない振りは終わりにしよう                                    | Dōse naratte omou yo<br><br>Mō zuibun tōku ni kita<br><br>Nani mo shiranai furi wa owari ni shiyou                                                                             | Might as well, I think<br><br>I’ve come far enough <br><br>Let’s put an end to pretending not to know anything                                                                                                           |
