--- a/(2019) Elma/09. A Hole Opened Up in My Heart.md
+++ b/(2019) Elma/09. A Hole Opened Up in My Heart.md
@@ -1,7 +1,7 @@
 心に穴が空いた | Kokoro ni Ana ga Aita
-#### [EJ/bluepenguin](https://ejtranslations.wordpress.com/2019/06/27/yorushika-kokoro-ni-ana-ga-aita/)
+#### Lyrics
 
-| Japanese                                                                                                                         | Romanji                                                                                                                                                                                                                                                 | English                                                                                                                                                                                                                                                                                        |
+| Japanese                                                                                                                         | Romanji                                                                                                                                                                                                                                                 | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2019/06/27/yorushika-kokoro-ni-ana-ga-aita/)                                                                                                                                                                                             |
 | -------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 小さな穴が空いた<br><br>この胸の中心に一つ<br><br>夕陽の街を塗った<br><br>夜紛いの夕暮れ                                                                         | chiisa na ana ga aita<br><br>kono mune no chuushin ni hitotsu<br><br>yuuhi no machi o nutta<br><br>yorumagai no yuugure                                                                                                                                 | A small hole opened up<br><br>Right in the middle of my chest<br><br>A night-imitating twilight<br><br>Painted the town                                                                                                                                                                        |
 | 忘れたいのだ<br><br>忘れたいのだ<br><br>忘れたい脳裏を埋め切った青空に君を描き出すだけ                                                                              | wasuretai no da<br><br>wasuretai no da<br><br>wasuretai nouri o umekitta aozora ni kimi o egakidasu dake                                                                                                                                                | I want to forget<br><br>I want to forget<br><br>But in the blue sky that buries my mind that wants to forget, I only see you                                                                                                                                                                   |
