--- a/(2019) Elma/11. Voice.md
+++ b/(2019) Elma/11. Voice.md
@@ -1,7 +1,7 @@
 声 | Koe
-#### [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/)
+#### Lyrics
 
-| Japanese                                                                                                                    | Romanji                                                                                                                                                                                                                                   | English                                                                                                                                                                                                                                                                                                                         |
+| Japanese                                                                                                                    | Romanji                                                                                                                                                                                                                                   | [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/)                                                                                                                                                                                                                                      |
 | --------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | どうしたって触れない<br><br>どうやっても姿を見せない<br><br>簡単に忘れるくせに<br><br>もうちょっとだけ覚えていたい                                                       | Dō shita tte sawarenai<br><br>Dō yatte mo sugata o misenai<br><br>Kantan ni wasureru kuse ni<br><br>Mō chotto dake oboeteitai                                                                                                             | No matter what I do, I can’t touch you<br><br>Whatever I do, you won’t show yourself<br><br>I easily forget things, but<br><br>I just wanna remember it for a little while longer                                                                                                                                               |
 | この歌の在り処を                                                                                                                    | Kono uta no ari ka o                                                                                                                                                                                                                      | The space where this song exists                                                                                                                                                                                                                                                                                                |
