--- a/(2019) Elma/12. Amy.md
+++ b/(2019) Elma/12. Amy.md
@@ -1,7 +1,7 @@
 エイミー | Amy
-#### [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/)
+#### Lyrics
 
-| Japanese                                                                   | Romanji                                                                                                                                                | English                                                                                                                                                                                          |
+| Japanese                                                                   | Romanji                                                                                                                                                | [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/)                                                                                                       |
 | -------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | 口に出してもう一回<br><br>ギターを鳴らして二拍<br><br>歌詞を書いてもう三節<br><br>四度目の夏が来る              | kuchi ni dashite moo ikkai<br><br>gitaa o narashite ni haku<br><br>kashi o kaite moo san setsu<br><br>yon dome no natsugakuru                          | Say it one more time<br><br>Two beats ring out from a guitar<br><br>Three measures worth of lyrics written down<br><br>The fourth summer will come                                               |
 | 誤解ばっかさ、手遅れみたいな話が一つ<br><br>頭の六畳間、君と暮らす僕がいる                                  | gokai bakka sa, teokure mitai nahanashi ga hitotsu<br><br>atama no rokujooma, kimi to kurasu boku ga iru                                               | We’ve been so full of misunderstandings, I have one more story to tell before it’s too late<br><br>I live there with you, inside the room in my head that’s 6 tatami mats wide                   |
