--- a/(2019) Elma/14. Nautilus.md
+++ b/(2019) Elma/14. Nautilus.md
@@ -1,7 +1,7 @@
 ノーチラス | Nautilus
-#### [EJ/bluepenguin](https://ejtranslations.wordpress.com/2019/12/12/yorushika-nautilus/)
+#### Lyrics
 
-| Japanese                                                                                       | Romanji                                                                                                                                                                                                | English                                                                                                                                                                                                                                                |
+| Japanese                                                                                       | Romanji                                                                                                                                                                                                | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2019/12/12/yorushika-nautilus/)                                                                                                                                                                  |
 | ---------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | 時計が鳴ったからやっと眼を覚ました<br><br>昨日の風邪がちょっと嘘みたいだ<br><br>出かけようにも、あぁ、予報が雨模様だ<br><br>どうせ出ないのは夜が明けないから     | tokei ga natta kara yatto me o samashita<br><br>kinou no kaze ga chotto uso mitai da<br><br>dekakeyou ni mo, aa, yohou ga amemoyou da<br><br>douse denai no wa yoru ga akenai kara                     | When the alarm clock rang, I finally woke up<br><br>The flu I had yesterday doesn’t seem real anymore<br><br>I think of going out, but, ah, the forecast says it looks like rain<br><br>Well, I couldn’t go anyway because it’s still dark             |
 | 喉が渇くとか、心が痛いとか、人間の全部が邪魔してるんだよ                                                                   | nodo ga kawaku to ka, kokoro ga itai to ka, ningen no zenbu ga jama shite’ru n’da yo                                                                                                                   | A dry throat, a hurting heart–all these human things are getting in my way                                                                                                                                                                             |
