--- a/(2019) That's Why I Gave Up On Music/02. Deep Indigo.md
+++ b/(2019) That's Why I Gave Up On Music/02. Deep Indigo.md
@@ -1,7 +1,7 @@
 藍二乗 | Ai Nijou [[#^title]]
-#### [EJ/bluepenguin](https://ejtranslations.wordpress.com/2019/01/08/yorushika-ai-nijou/)
+#### Lyrics
 
-| Japanese                                                                                | Romanji                                                                                                                                                                              | English                                                                                                                                                                                                                                                    |
+| Japanese                                                                                | Romanji                                                                                                                                                                              | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2019/01/08/yorushika-ai-nijou/)                                                                                                                                                                      |
 | --------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 変わらない風景 浅い正午<br><br>高架下、藍二乗、寝転ぶまま<br><br>白紙の人生に拍手の音が一つ鳴っている<br><br>空っぽな自分を今日も歌っていた      | kawaranai fuukei asai shougo<br><br>kouka shita, ai nijou, nekorobu mama<br><br>hakushi no jinsei ni hakushu no ne ga hitotsu natte iru<br><br>karappo na jibun o kyou mo utatte ita | The scenery doesn’t change; on a faded afternoon<br><br>I’m lying in the deep indigo beneath the overpass<br><br>I hear a single clap for my blank-page life<br><br>I was singing about my own emptiness today, as usual                                   |
 | 変わらないように<br><br>君が主役のプロットを書くノートの中<br><br>止まったガス水道 世間もニュースも所詮他人事<br><br>この人生さえほら、インクみたいだ | kawaranai you ni<br><br>kimi ga shuyaku no PUROTTO o kaku NOOTO no naka<br><br>tomatta GASU suidou seken mo NYUUSU mo shosen taningoto<br><br>kono jinsei sae hora, INKU mitai da    | So things wouldn’t change,<br><br>I wrote a story starring you in my notebook<br><br>My gas and water being cut off, society, and the news are all someone else’s problem<br><br>Look, my life is like ink                                                 |
