--- a/(2019) That's Why I Gave Up On Music/03. August, That Place, Moonlight.md
+++ b/(2019) That's Why I Gave Up On Music/03. August, That Place, Moonlight.md
@@ -1,7 +1,7 @@
 八月、某、月明かり | Hachigatsu, Nanigashi, Tsukiakari [[#^title]]
-#### [EJ/bluepenguin](https://ejtranslations.wordpress.com/2019/08/31/yorushika-hachigatsu-nanigashi-tsukiakari/)
+#### Lyrics
 
-| Japanese                                                                                                     | Romanji                                                                                                                                                                                                                                                   | English                                                                                                                                                                                                                                                                                                                          |
+| Japanese                                                                                                     | Romanji                                                                                                                                                                                                                                                   | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2019/08/31/yorushika-hachigatsu-nanigashi-tsukiakari/)                                                                                                                                                                                                                     |
 | ------------------------------------------------------------------------------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 何もいらない                                                                                                       | nani mo iranai                                                                                                                                                                                                                                            | I don’t need anything                                                                                                                                                                                                                                                                                                            |
 | 心臓が煩かった　歩くたび息が詰まった<br><br>初めてバイトを逃げ出した<br><br>音楽も生活も、もうどうでもよかった<br><br>ただ気に食わないものばかりが増えた                     | shinzou ga urusakatta aruku tabi iki ga tsumatta<br><br>hajimete BAITO o nigedashita<br><br>ongaku mo seikatsu mo, mou dou demo yokatta<br><br>tada ki ni kuwanai mono bakari ga fueta                                                                    | My heart became irritated; as I walked, it got hard to breathe<br><br>When I first ran away from my part-time job<br><br>I didn’t care anymore about music or life or anything<br><br>The number of things that annoyed me just kept increasing                                                                                  |
