--- a/(2019) That's Why I Gave Up On Music/04. Songwriting and Coffee.md
+++ b/(2019) That's Why I Gave Up On Music/04. Songwriting and Coffee.md
@@ -1,7 +1,7 @@
 詩書きとコーヒー | Shikaki to Koohii
-#### [EJ/bluepenguin](https://ejtranslations.wordpress.com/2020/04/11/yorushika-shigaki-to-koohii/)
+#### Lyrics
 
-| Japanese                                                                                                                                                                  | Romanji                                                                                                                                                                                                                                                                                  | English                                                                                                                                                                                                                                                                                                                                                                                          |
+| Japanese                                                                                                                                                                  | Romanji                                                                                                                                                                                                                                                                                  | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2020/04/11/yorushika-shigaki-to-koohii/)                                                                                                                                                                                                                                                                                                   |
 | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | 最低限の生活で小さな部屋の六畳で<br><br>君と暮らせれば良かった　それだけ考えていた<br><br>幸せの色は準透明　なら見えない方が良かった<br><br>何も出来ないのに今日が終わる                                                                          | saiteigen no seikatsu de chiisa na heya no rokujou de<br><br>kimi to kurasereba yokatta sore dake kangaete ita<br><br>shiawase no iro wa juntoumei nara mienai hou ga yokatta<br><br>nani mo dekinai no ni kyou ga owaru                                                                 | In my bare-minimum life, in my tiny six-tatami-mat apartment<br><br>All I could think about was that I wished I could live with you<br><br>If the color of happiness is semi-transparent, then I wish I’d never seen it<br><br>Even though I haven’t been able to do anything, today comes to an end                                                                                             |
 | 最低限の生活で小さな部屋の六畳で<br><br>天井を眺める毎日　何かを考えていた<br><br>幸せの価値は60000円<br><br>家賃が引かれて4000円<br><br>ぼやけた頭で想い出を漁る                                                                     | saiteigen no seikatsu de chiisa na heya no rokujou de<br><br>tenjou o nagameru mainichi nanika o kangaete ita<br><br>shiawase no kachi wa rokuman’en<br><br>yachin ga hikarete yonsen’en<br><br>boyaketa atama de omoide o asaru                                                         | In my bare-minimum life, in my tiny six-tatami-mat apartment<br><br>Every day I was staring at the ceiling thinking about something<br><br>The price of happiness is [60,000 yen](https://www.google.com/search?q=60000+yen+to+usd)<br><br>After rent I’ve only got [4,000 yen](https://www.google.com/search?q=4000+yen+to+usd) left<br><br>I go scrounging in my blurred thoughts for memories |
