--- a/(2019) That's Why I Gave Up On Music/06. Let's Dance.md
+++ b/(2019) That's Why I Gave Up On Music/06. Let's Dance.md
@@ -1,7 +1,7 @@
 踊ろうぜ | Odorouze
-#### [EJ/bluepenguin](https://ejtranslations.wordpress.com/2020/05/12/yorushika-odorou-ze/)
+#### Lyrics
 
-| Japanese                                                                                                                          | Romanji                                                                                                                                                                                                                                                              | English                                                                                                                                                                                                                                                                                                    |
+| Japanese                                                                                                                          | Romanji                                                                                                                                                                                                                                                              | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2020/05/12/yorushika-odorou-ze/)                                                                                                                                                                                                                     |
 | --------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 嗚呼、透明よりも澄み切った心で<br><br>世の中を笑っているんだよ<br><br>嗚呼、音楽なんかを選んだ<br><br>あの日の自分を馬鹿に思うね                                                      | aa, toumei yori mo sumikitta kokoro de<br><br>yo no naka o waratte iru n’da yo<br><br>aa, ongaku nanka o eranda<br><br>ano hi no jibun o baka ni omou ne                                                                                                             | Ah, with a heart that’s clearer than transparent,<br><br>I’m laughing at the world<br><br>Ah, thinking back to when I chose music<br><br>I feel I was such an idiot then                                                                                                                                   |
 | 伝えたい全部はもう<br><br>この詩も自分の声すらも                                                                                                      | tsutaetai zenbu wa mou<br><br>kono uta mo jibun no koe sura mo                                                                                                                                                                                                       | Everything I want to tell you–<br><br>This song, even my voice–                                                                                                                                                                                                                                            |
