--- a/(2019) That's Why I Gave Up On Music/07. In June, I Write About the Town After the Rain.md
+++ b/(2019) That's Why I Gave Up On Music/07. In June, I Write About the Town After the Rain.md
@@ -1,7 +1,7 @@
 六月は雨上がりの街を書く | Rokugatsu wa Ameagari no Machi wo Kaku
-#### [EJ/bluepenguin](https://ejtranslations.wordpress.com/2020/06/06/yorushika-rokugatsu-wa-ameagari-no-machi-o-kaku/)
+#### Lyrics
 
-| Japanese                                                                          | Romanji                                                                                                                                                | English                                                                                                                                                                                                                                                                                                                                                              |
+| Japanese                                                                          | Romanji                                                                                                                                                | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2020/06/06/yorushika-rokugatsu-wa-ameagari-no-machi-o-kaku/)                                                                                                                                                                                                                                                   |
 | --------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 窓映る街の群青<br><br>雨樋を伝う五月雨<br><br>ぼうとしたまま見ている<br><br>雫一つ落ちる　落ちる                      | mado utsuru machi no gunjou<br><br>amadoi o tsutau satsukiame<br><br>bou to shita mama mite iru<br><br>shizuku hitotsu ochiru ochiru                   | The ultramarine town is reflected in the window<br><br>The early summer rain flows through the drainpipe<br><br>In a daze, I’m watching as<br><br>A single drop falls, falls                                                                                                                                                                                         |
 | 心の形は長方形<br><br>この紙の中だけに宿る<br><br>書き連ねた詩の表面<br><br>その上澄みにだけ君がいる                    | kokoro no katachi wa chouhoukei<br><br>kono kami no naka dake ni yadoru<br><br>kakitsuraneta uta no hyoumen<br><br>sono uwazumi ni dake kimi ga iru    | The shape of my heart is rectangular<br><br>It lives only in this sheet of paper<br><br>While you exist only in the [supernate](https://www.thoughtco.com/definition-of-supernate-604666#:~:text=In%20chemistry%2C%20the%20supernate%20is,above%20the%20pellet%20from%20centrifugation.)<br><br>Floating on the surface of the lyrics that I wrote one after another |
