--- a/(2019) That's Why I Gave Up On Music/08. In May, From the Window with Emerald Green.md
+++ b/(2019) That's Why I Gave Up On Music/08. In May, From the Window with Emerald Green.md
@@ -1,7 +1,7 @@
 五月は花緑青の窓辺から | Gogatsu wa Hanarokushou no Madobe Kara
-#### [Night Deer Translations, Loafer](https://docs.google.com/document/d/1AYYdLls9-Q9GX0WNGIxoXgt_6Ne4jr6-bvVPd43UsGg/edit)
+#### Lyrics
 
-| Japanese                                                                | Romanji                                                                                                                                              | English                                                                                                                                                                                                    |
+| Japanese                                                                | Romanji                                                                                                                                              | [Night Deer Translations, Loafer](https://docs.google.com/document/d/1AYYdLls9-Q9GX0WNGIxoXgt_6Ne4jr6-bvVPd43UsGg/edit)                                                                                    |
 | ----------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 夏が終わることもこの胸は<br><br>気のせいだって思っていた                                        | natsu ga owaru koto mo kono mune wa<br><br>ki no sei datte omotteita                                                                                 | In my chest it felt like even the summer ending<br><br>Was just my imagination                                                                                                                             |
 | 空いた教室　風揺れるカーテン<br><br>君と空を見上げたあの夏が<br><br>いつまでだって頭上にいた                  | aita kyōshitsu 　 kaze yureru kāten<br><br>kun to sora o miageta ano natsu ga<br><br>itsu made datte zujō ni ita                                      | In an empty classroom, the curtain was swaying in the wind<br><br>There, I was watching the sky together with you<br><br>That summer will never cease to be on my mind                                     |
