--- a/(2019) That's Why I Gave Up On Music/09. False Night.md
+++ b/(2019) That's Why I Gave Up On Music/09. False Night.md
@@ -1,7 +1,7 @@
 夜紛い | Yorumagai
-#### [Loafer](https://docs.google.com/document/d/1AYYdLls9-Q9GX0WNGIxoXgt_6Ne4jr6-bvVPd43UsGg/edit)
+#### Lyrics
 
-| Japanese                                                                                                                        | Romanji                                                                                                                                                                                                                                                                | English                                                                                                                                                                                                                                                                                                                              |
+| Japanese                                                                                                                        | Romanji                                                                                                                                                                                                                                                                | [Loafer](https://docs.google.com/document/d/1AYYdLls9-Q9GX0WNGIxoXgt_6Ne4jr6-bvVPd43UsGg/edit)                                                                                                                                                                                                                                       |
 | ------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | 等身大を歌うとかそんなのどうでもいいから<br><br>他人よりも楽に生きたい　努力はしたくない                                                                                | toushindai wo utau toka sonna no dou demo ii kara<br><br>hitoyori mo raku ni ikitai doryoku wa shitaku nai                                                                                                                                                             | Who cares about singing faithfully<br><br>I wanna live taking it easier than other people, I don’t wanna work hard                                                                                                                                                                                                                   |
 | 俯いたまま歩くから空の青さがわからない<br><br>君の写真を見ていただけ                                                                                          | utsumuita mama aruku kara sora no aosa ga wakaranai<br><br>kimi no shashin wo mite ita dake                                                                                                                                                                            | Walking along with my head down, not realizing how blue the sky is<br><br>I’m stuck gazing only at your picture                                                                                                                                                                                                                      |
