--- a/(2019) That's Why I Gave Up On Music/11. Parade.md
+++ b/(2019) That's Why I Gave Up On Music/11. Parade.md
@@ -1,7 +1,7 @@
 パレード | Parade
-#### [EJ/bluepenguin](https://ejtranslations.wordpress.com/2019/03/13/yorushika-parade/)
+#### Lyrics
 
-| Japanese                                                                              | Romanji                                                                                                                                                                                         | English                                                                                                                                                                                   |
+| Japanese                                                                              | Romanji                                                                                                                                                                                         | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2019/03/13/yorushika-parade/)                                                                                                       |
 | ------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 身体の奥 喉の真下<br><br>心があるとするなら君はそこなんだろうから                                                 | karada no oku nodo no masshita<br><br>kokoro ga aru to suru nara kimi wa soko na n’darou kara                                                                                                   | If there’s a heart inside my body, right below my throat,<br><br>Then that must be where you are                                                                                          |
 | ずっと前からわかっていたけど<br><br>歳取れば君の顔も忘れてしまうからさ<br><br>身体の奥 喉の中で 言葉が出来る瞬間を僕は知りたいから            | zutto mae kara wakatte ita kedo<br><br>toshitoreba kimi no kao mo wasurete shimau kara sa<br><br>karada no oku nodo no naka de kotoba ga dekiru shunkan o boku wa shiritai kara                 | I’ve known for a long time<br><br>That as I got older I would even forget your face<br><br>Because I want to know the moment that words are able to form inside my body, in my throat     |
