--- a/(2019) That's Why I Gave Up On Music/12. Elma.md
+++ b/(2019) That's Why I Gave Up On Music/12. Elma.md
@@ -1,7 +1,7 @@
 エルマ | Elma
-#### [Loafer](https://docs.google.com/document/d/1AYYdLls9-Q9GX0WNGIxoXgt_6Ne4jr6-bvVPd43UsGg/edit)
+#### Lyrics
 
-| Japanese                                                                    | Romanji                                                                                                                                                                 | English                                                                                                                                                                                                           |
+| Japanese                                                                    | Romanji                                                                                                                                                                 | [Loafer](https://docs.google.com/document/d/1AYYdLls9-Q9GX0WNGIxoXgt_6Ne4jr6-bvVPd43UsGg/edit)                                                                                                                    |
 | --------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 嘘つきなんて　わかって　触れて<br><br>エルマ　まだ　まだ痛いよ<br><br>もうさよならだって歌って<br><br>暮れて夜が来るまで    | usotsuki nante wakatte furete<br><br>eruma mada mada itai yo<br><br>mou sayonara datte utatte<br><br>kurete yoru ga kuru made                                           | I know I’m a liar, I feel it<br><br>Still Elma, it still hurts<br><br>So sing goodbye already<br><br>Until the darkening night falls                                                                              |
 | 朝日の差す木漏れ日　僕とエルマ<br><br>まだ　まだ眠いかい<br><br>初夏の初め近づく五月の森                        | asahi no sasu komorebi boku to eruma<br><br>mada mada nemui kai<br><br>shoka no hajime chikazuku go gatsu no mori                                                       | Elma and I, with the morning sun shining through the trees on us<br><br>Are you still, still sleepy?<br><br>The early summer is drawing near in the May forest                                                    |
