--- a/(2020) Plagiarism/02. Burglar.md
+++ b/(2020) Plagiarism/02. Burglar.md
@@ -1,7 +1,7 @@
 昼鳶 | Hirutonbi
-#### [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)
+#### Lyrics
 
-| Japanese                                                                   | Romanji                                                                                                                                                    | English                                                                                                                                                                                                 |
+| Japanese                                                                   | Romanji                                                                                                                                                    | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                               |
 | -------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 器量、才覚、価値観<br><br>骨の髄まで全部妬ましい<br><br>心全部満たしたい<br><br>嫉む脳裏は舌打ちばかり            | Kiryō, saikaku, kachikan<br><br>Hone no zui made zenbu netamashii<br><br>Kokoro zenbu mitashitai<br><br>Sonemu nōri wa shitauchi bakari                    | Good looks, wits, a sense of values<br><br>I envy it all down to the bone<br><br>I wanna fill my whole heart<br><br>But my jealous mind keeps on clicking its tongue [[#^1]]                            |
 | 誇大広告勝り、世は死に体の音楽ばかり<br><br>君の全部妬ましい<br><br>浅ましいこの心根が疼くばかり                   | Kodai kōkoku masari, yo wa shinitei no ongaku bakari<br><br>Kimi no zenbu netamashii<br><br>Asamashii kono kokorone ga uzuku bakari                        | Even better than false advertising, the world is filled with nothing but hopeless music [[#^2]]<br><br>I'm envious of everything about you<br><br>This wretched nature at my heart keeps on aching      |
