--- a/(2020) Plagiarism/03. Prostitution.md
+++ b/(2020) Plagiarism/03. Prostitution.md
@@ -1,7 +1,7 @@
 春ひさぎ | Haru Hisagi [[#^title]]
-#### [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)
+#### Lyrics
 
-| Japanese                                                                                                        | Romanji                                                                                                                                                                                                                               | English                                                                                                                                                                                                                                                                                                                     |
+| Japanese                                                                                                        | Romanji                                                                                                                                                                                                                               | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                                                                                                                                                   |
 | --------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 大丈夫だよ大丈夫<br><br>寝てれば何とかなるし<br><br>どうしたんだいそんな顔してさぁ<br><br>別にどうともないよ                                              | Daijōbu da yo daijōbu<br><br>Netereba nantoka naru shi<br><br>Dō shita n dai sonna kao shite saa<br><br>Betsuni dō to mo nai yo                                                                                                       | Everything's ok, it's fine<br><br>If you sleep it'll work itself out, so<br><br>What's up with you making that face, hey<br><br>It's nothing special you know                                                                                                                                                               |
 | 駅前で愛を待ち惚け<br><br>他にすることもないし<br><br>不誠実の価値も教えてほしいわ                                                               | Ekimae de ai wo machibōke<br><br>Hoka ni suru koto mo nai shi<br><br>Fuseijitsu no kachi mo oshiete hoshii wa                                                                                                                         | Waiting in vain for love in front of the station<br><br>I got nothing better to do anyway<br><br>I wanna be taught the value of insincerity as well                                                                                                                                                                         |
