--- a/(2020) Plagiarism/04. Bomber.md
+++ b/(2020) Plagiarism/04. Bomber.md
@@ -1,8 +1,8 @@
 爆弾魔 | Bakudanma **Re-Recording**
-#### [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)
+#### Lyrics
 EJ/Bluepenguin translation [[03. Compulsive Bomber]]
 
-| Japanese                                                            | Romanji                                                                                                                                | English                                                                                                                                                                 |
+| Japanese                                                            | Romanji                                                                                                                                | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                               |
 | ------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 死んだ眼で爆弾片手に口を開く<br><br>さよならだ人類、みんな吹き飛んじまえ                            | shinda me de bakudan katate ni kuchi o hiraku<br><br>sayonara da jinrui, minna fukitonjimae                                            | With dead eyes and a bomb in one hand, I open my mouth<br><br>It's farewell humanity, I'm blowing everyone all away                                                     |
 | 泣いた顔で爆弾片手　夜が苦しい<br><br>安っぽいナイトショーのワンシーンみたいな夢が見たい                    | naita kao de bakudan katate yoru ga kurushii<br><br>yasuppoi NAITO SHOO no WANSHIIN mitai na yume ga mitai                             | With a crying face and a bomb in one hand, the night is painful<br><br>I wanna have a dream that's like a scene from a shitty late night show                           |
