--- a/(2020) Plagiarism/06. Replicant.md
+++ b/(2020) Plagiarism/06. Replicant.md
@@ -1,7 +1,7 @@
 レプリカント | Replicant
-#### [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)
+#### Lyrics
 
-| Japanese                                                                                                                                    | Romanji                                                                                                                                                                                                                                                                              | English                                                                                                                                                                                                                                                                                                                              |
+| Japanese                                                                                                                                    | Romanji                                                                                                                                                                                                                                                                              | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                                                                                                                                                            |
 | ------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | 君は映画をずっと観ている<br><br>誰一人もいない劇場で<br><br>今思えばチープなセットで人のよく死ぬSF映画                                                                                | Kimi wa eiga o zutto miteiru<br><br>Dare hitori mo inai gekijō de<br><br>Ima omoeba chi-pu na setto de hito no yoku shinu SF eiga                                                                                                                                                    | You're always watching a movie<br><br>In a theater with no one in it<br><br>If you think about it now, it's a sci-fi movie [[#^1]] with a cheap set where many people die                                                                                                                                                            |
 | いつか世界が真面になって、人の寿命さえ随分伸びて、<br><br>死ねない世界になればいいのにね                                                                                            | Itsuka sekai ga matomo ni natte, hito no jumyō sae zuibun nobite,<br><br>Shinenai sekai ni nareba ii noni ne                                                                                                                                                                         | If one day the world would become decent, and people's lifespans expand considerably,<br><br>If only it could become a world where you can't die, right                                                                                                                                                                              |
