--- a/(2020) Plagiarism/07. Flower and Badger Game.md
+++ b/(2020) Plagiarism/07. Flower and Badger Game.md
@@ -1,7 +1,7 @@
 花人局 | Hanamotase [[#^title]]
-#### [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)
+#### Lyrics
 
-| Japanese                                                                                                         | Romanji                                                                                                                                                                                                                       | English                                                                                                                                                                                                                                                                           |
+| Japanese                                                                                                         | Romanji                                                                                                                                                                                                                       | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                                                                                                         |
 | ---------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | さよならを置いて僕に花もたせ<br><br>覚束ぬままに夜が明けて<br><br>誰もいない部屋で起きた<br><br>その温もり一つ残して                                           | Sayonara wo oite boku ni hanamotase<br><br>Obotsukanu mamani yo ga akete<br><br>Dare mo inai heya de okita<br><br>Sono nukumori hitotsu nokoshite                                                                             | Put down farewell and let me have a flower[[#^1]]<br><br>While still in doubt, dawn breaks<br><br>And I awoke in a room with no one in it<br><br>Leaving me a lone[[#^2]] warmth                                                                                                  |
 | 昨日の夜のことは少しも覚えてないけれど<br><br>他に誰かが居た、そんな気がただしている<br><br>二日酔いが残る頭は回っちゃいないけれど<br><br>わからないままでもまぁ、それはそれでも綺麗だ          | Kinō no yoru no koto wa sukoshi mo oboetenai keredo<br><br>Hoka ni dareka ga ita, sonna ki ga tadashiteiru<br><br>Futsukayoi ga nokoru atama wa mawa chainai keredo<br><br>Wakaranai mama demo maa, sore wa soredemo kirei da | I don't remember the slightest bit of yesterday's night, however<br><br>I'm correcting the feeling that there was someone else there<br><br>I'm still hungover and not thinking too well, however<br><br>Still not being able to understand it, well, that in itself is beautiful |
