--- a/(2020) Plagiarism/09. Plagiarism.md
+++ b/(2020) Plagiarism/09. Plagiarism.md
@@ -1,7 +1,7 @@
 盗作 | Tousaku
-#### [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)
+#### Lyrics
 
-| Japanese                                                                                                                               | Romanji                                                                                                                                                                                                                                          | English                                                                                                                                                                                                                                                                                   |
+| Japanese                                                                                                                               | Romanji                                                                                                                                                                                                                                          | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                                                                                                                 |
 | -------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 「音楽の切っ掛けは何だっけ。<br><br>父の持つレコードだったかな。<br><br>音を聞くことは気持ちが良い。<br><br>聞くだけなら努力もいらない。                                                       | "Ongaku no kikkake wa nan dakke.<br><br>Chichi no motsu reko-do datta ka na.<br><br>Oto o kiku koto wa kimochi ga ii.<br><br>Kiku dake nara doryoku mo iranai.                                                                                   | "Why was it that I started music again.<br><br>I wonder if it was the records my father had.<br><br>Listening to the sound feels good.<br><br>Just listening doesn't take any work.                                                                                                       |
 | 前置きはいいから話そう。<br><br>ある時、思い付いたんだ。<br><br>この歌が僕の物になれば、この穴は埋まるだろうか。                                                                       | Maeoki wa ii kara hanasou.<br><br>Aru toki, omoitsuita n da.<br><br>Kono uta ga boku no mono ni nareba, kono ana wa umaru darou ka.                                                                                                              | Let's start with a preface.<br><br>One day, I thought of this.<br><br>If this song could become mine, would this hole be filled.                                                                                                                                                          |
