--- a/(2020) Plagiarism/10. Thoughtcrime.md
+++ b/(2020) Plagiarism/10. Thoughtcrime.md
@@ -1,7 +1,7 @@
 思想犯 | Shisouhan [[#^title]]
-#### [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)
+#### Lyrics
 
-| Japanese                                                                                                                     | Romanji                                                                                                                                                                                                                                                                  | English                                                                                                                                                                                                                                                                                                             |
+| Japanese                                                                                                                     | Romanji                                                                                                                                                                                                                                                                  | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                                                                                                                                           |
 | ---------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 他人に優しいあんたにこの心がわかるものか<br><br>人を呪うのが心地良い、だから詩を書いていた<br><br>朝の報道ニュースにいつか載ることが夢だった<br><br>その為に包丁を研いでる                            | Hito ni yasashii anta ni kono kokoro ga wakaru mono ka<br><br>Hito o norou no ga kokochi ii, dakara uta wo kaiteita<br><br>Asa no hōdō nyu-su ni itsuka noru koto ga yume datta<br><br>Sono tame ni hōchō wo toideru                                                     | As if you, who's kind to others, could fucking understand this heart<br><br>Cursing others feels good, and so I wrote songs<br><br>It was my dream to one day be on the morning news<br><br>That's why I'm now sharpening my knife                                                                                  |
 | 硝子を叩きつける音、何かの紙を破くこと、<br><br>さよならの後の夕陽が美しいって、君だってわかるだろ                                                                        | Garasu o tatakitsukeru oto, nani ka no kami o yabuku koto,<br><br>Sayonara no ato no yūhi ga utsukushii tte, kimi datte wakaru daro                                                                                                                                      | The sound of smashing glass, ripping up some sort of paper,<br><br>The setting sun after goodbye is beautiful, even you must understand that!                                                                                                                                                                       |
