--- a/(2020) Plagiarism/13. Night Journey.md
+++ b/(2020) Plagiarism/13. Night Journey.md
@@ -1,7 +1,7 @@
 夜行 | Yakou [[#^title]]
-#### [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)
+#### Lyrics
 
-| Japanese                                                         | Romanji                                                                                                                                          | English                                                                                                                                                                                   |
+| Japanese                                                         | Romanji                                                                                                                                          | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                 |
 | ---------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | ねぇ、このまま夜が来たら、僕らどうなるんだろうね<br><br>列車にでも乗って行くかい。僕は何処でもいいかな          | nee, kono mama yoru ga kitara, bokura dou narun darou ne<br><br>ressha ni demo notte iku kai. boku wa dokodemo ii kana                           | Hey, if night comes like this, I wonder what'll become of us<br><br>So you're going to ride the train. As for me, I guess anywhere is fine                                                |
 | 君はまだわからないだろうけど、空も言葉で出来てるんだ<br><br>そっか、隣町なら着いて行くよ                 | kimi wa mada wakaranai darou kedo, sora mo kotoba de dekiterunda<br><br>souka, tonarimachi nara tsuite ikuyo                                     | You probably don't understand yet, but the sky is made of words too, you know<br><br>Oh right, if it's the next town over I'll go with you                                                |
