--- a/(2020) Plagiarism/14. Ghost in a Flower.md
+++ b/(2020) Plagiarism/14. Ghost in a Flower.md
@@ -1,7 +1,7 @@
 花に亡霊 | Hana ni Bourei
-#### [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)
+#### Lyrics
 
-| Japanese                                                                                                                 | Romanji                                                                                                                                                                                                                                                                | English                                                                                                                                                                                                                                                                                                                        |
+| Japanese                                                                                                                 | Romanji                                                                                                                                                                                                                                                                | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                                                                                                                                                      |
 | ------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | もう忘れてしまったかな<br><br>夏の木陰に座ったまま、氷菓を口に放り込んで風を待っていた                                                                          | mou wasurete shimatta ka na<br><br>natsu no kokage ni suwatta mama, aisu wo kuchi ni hoorikonde kaze wo matteita                                                                                                                                                       | Had I forgotten already<br><br>While sitting under the summer shade of the tree, we stuffed our faces with ice cream and were waiting for a breeze                                                                                                                                                                             |
 | もう忘れてしまったかな　世の中の全部嘘だらけ<br><br>本当の価値を二人で探しに行こうと笑ったこと                                                                      | mou wasurete shimatta ka na yononaka no zenbu usodarake<br><br>hontou no kachi wo futari de sagashi ni ikou to waratta koto                                                                                                                                            | Had I forgotten already, the world is riddled with lies<br><br>And that, while laughing, we promised to go search for true value in it                                                                                                                                                                                         |
