--- a/(2021) Creation/01. Robbery and Bouquet.md
+++ b/(2021) Creation/01. Robbery and Bouquet.md
@@ -1,7 +1,7 @@
 強盗と花束 | Goutou to Hanataba
-#### [Glens / Night Deer Translations](https://docs.google.com/document/d/1la4NJaq-Oi4560246ae6LNJwtEryYIVvNlU8zSr2gvs/)
+#### Lyrics
 
-| Japanese                                                                                                                                                     | Romanji                                                                                                                                                                                                                                                                                                                      | English                                                                                                                                                                                                                                                                                                                                                                                                                                        |
+| Japanese                                                                                                                                                     | Romanji                                                                                                                                                                                                                                                                                                                      | [Glens / Night Deer Translations](https://docs.google.com/document/d/1la4NJaq-Oi4560246ae6LNJwtEryYIVvNlU8zSr2gvs/)                                                                                                                                                                                                                                                                                                                            |
 | ------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | ある朝、僕は気付いたんですが<br><br>思ったよりもソファが狭い<br><br>お金が足りないわけでもないけど<br><br>家具屋は生活圏外<br><br>そうして僕は思ったんですが<br><br>隣の家なら徒歩一分<br><br>何とかなると思った<br><br>僕は包丁を持った             | Aru asa, boku wa kizuitan desu ga<br><br>Omotta yori mo sofa ga semai<br><br>Okane ga tarinai wake de mo nai kedo<br><br>Kaguya wa seikatsu kengai<br><br>Soshite boku wa omottan desu ga<br><br>Tonari no ie nara toho ippun<br><br>Nantoka naru to omotta<br><br>Boku wa hocho o motta                                     | One morning, I realized that<br><br>The sofa I have is smaller than I thought<br><br>It's not like I don't have enough money<br><br>But the furniture store is far from the neighbourhood<br><br>Then, it crossed my mind<br><br>That the house next door is just a one-minute walk away<br><br>Things will work out one way or another, I thought<br><br>And so, I carried a kitchen knife with me                                            |
 | 何にも満たされないなら<br><br>行こう、僕らで全部奪うのさ<br><br>紙みたいな理性なんてほら、飛ばしてしまえ<br><br>神様、本当にこの世の全部が人に優しいんだったら<br><br>少しくらいは僕らにくれたっていいじゃないですか                                   | Nan ni mo mitasarenai nara<br><br>Ikou, bokura de zenbu ubau no sa<br><br>Kami mitaina risei nante hora, tobashite shimae<br><br>Kamisama, honto ni kono yo no zenbu ga hito ni yasashii n dattara<br><br>Sukoshi kurai wa bokura ni kureta tte ii janai desu ka                                                             | If we're not fulfilled in the slightest,<br><br>Then let's go snatch everything away<br><br>And look, as for something like a rationality as flimsy as a piece of paper, just blow it away<br><br>Dear god, if every last part of this world is really kind to its people,<br><br>Then it's fine to let us have just a little bit of it, right?                                                                                                |
