--- a/(2021) Creation/02. Spring Thief.md
+++ b/(2021) Creation/02. Spring Thief.md
@@ -1,7 +1,7 @@
 春泥棒 | Haru Dorobou
-#### [Glens / Night Deer Translations](https://docs.google.com/document/d/1la4NJaq-Oi4560246ae6LNJwtEryYIVvNlU8zSr2gvs/)
+#### Lyrics
 
-| Japanese                                                                                                                             | Romanji                                                                                                                                                                                                                                                             | English                                                                                                                                                                                                                                                                                                                                                                                                         |
+| Japanese                                                                                                                             | Romanji                                                                                                                                                                                                                                                             | [Glens / Night Deer Translations](https://docs.google.com/document/d/1la4NJaq-Oi4560246ae6LNJwtEryYIVvNlU8zSr2gvs/)                                                                                                                                                                                                                                                                                             |
 | ------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 高架橋を抜けたら雲の隙間に青が覗いた<br><br>最近どうも暑いからただ風が吹くのを待ってた                                                                                      | Koukakyou o nuketara kumo no sukima ni ao ga nozoita<br><br>Saikin doumo atsui kara tada kaze ga fuku no o matteta                                                                                                                                                  | When I crossed the elevated bridge, I could see the blue sky peeking through the clouds<br><br>It's really hot lately, so I was just waiting for a breeze                                                                                                                                                                                                                                                       |
 | 木陰に座る<br><br>何か頬に付く<br><br>見上げれば頭上に咲いて散る                                                                                             | Kokage ni suwaru<br><br>Nani ka hoo ni tsuku<br><br>Miagereba zujou ni saite chiru                                                                                                                                                                                  | Sitting beneath the shade of a tree,<br><br>There's something stuck on my cheeks<br><br>When I look up, flowers are blooming and falling right above my head                                                                                                                                                                                                                                                    |
