--- a/(2021) Creation/04. Eat the Wind.md
+++ b/(2021) Creation/04. Eat the Wind.md
@@ -1,7 +1,7 @@
 風を食む | Kaze wo Hamu
-#### [Loafer](https://docs.google.com/document/d/1goQihBrgDgFiW26HE_2T0yRUd9phsJOQBj3E7Zs-3Q0/)
+#### Lyrics
 
-| Japanese                                                                                               | Romanji                                                                                                                                                                                                                       | English                                                                                                                                                                                                                                                                                            |
+| Japanese                                                                                               | Romanji                                                                                                                                                                                                                       | [Loafer](https://docs.google.com/document/d/1goQihBrgDgFiW26HE_2T0yRUd9phsJOQBj3E7Zs-3Q0/)                                                                                                                                                                                                         |
 | ------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 明日はきっと天気で　悪いことなんてないね<br><br>タイムカードを押して僕は朝、目を開いた<br><br>僕らは今日も買ってる　足りないものしかなくて<br><br>靴を履きながら空想　空は高いのかな | Ashita wa kitto tenki de warui koto nante nai ne<br><br>Taimu ka-do o oshite boku wa asa, me o hiraita<br><br>Bokura wa kyō mo katteru tarinai mono shika nakute<br><br>Kutsu o haki nagara kūsō sora wa takai no ka na       | With tomorrow’s weather, surely nothing could go wrong<br><br>Swiping my time card in the morning, I open my eyes<br><br>We’re buying again today, things we can’t get enough of<br><br>I wonder if the sky is high[[#^1]], a daydream I have while putting on my shoes                            |
 | 貴方さえ　貴方さえ<br><br>これはきっとわからないんだ<br><br>はにかむ顔が散らつく<br><br>口を開けて風を食む                                      | Anata sae anata sae<br><br>Kore wa kitto wakaranai n da<br><br>Hanikamu kao ga chira tsuku<br><br>Kuchi o akete kaze o hamu                                                                                                   | Even you, even you<br><br>Surely don’t understand this<br><br>Your shy face flickers[[#^2]]<br><br>Open your mouth and graze the wind[[#^3]]                                                                                                                                                       |
