--- a/(2021) Creation/05. Liar.md
+++ b/(2021) Creation/05. Liar.md
@@ -1,7 +1,7 @@
 嘘月 | Usotsuki [[#^title]]
-#### 
+#### Lyrics
 
-| Japanese                                                                                                                                    | Romanji                                                                                                                                                                                                                                                                      | English                                                                                                                                                                                                                                                                                                      |
+| Japanese                                                                                                                                    | Romanji                                                                                                                                                                                                                                                                      | [Loafer](https://docs.google.com/document/d/1goQihBrgDgFiW26HE_2T0yRUd9phsJOQBj3E7Zs-3Q0/)                                                                                                                                                                                                                   |
 | ------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | 雨が降った　花が散った<br><br>ただ染まった　頬を想った<br><br>僕はずっと　バケツいっぱいの月光を飲んでる<br><br>本当なんだ　夜みたいで<br><br>薄く透明な口触りで<br><br>そうなんだって<br><br>笑ってもいいけど             | Ame ga futta hana ga chitta<br><br>Tada somatta hoho wo omotta<br><br>Boku wa zutto baketsu ippai no gekkou wo nonderu<br><br>Hontou nan da yoru mitai de<br><br>Usuku toumei na kuchizawari de<br><br>Sou nan datte<br><br>Warattemo ii kedo                                | Rain fell, flowers scattered<br><br>I thought of just those dyed cheeks<br><br>I've always been drinking[[#^1]] buckets full of moonlight<br><br>It's really true, just like night<br><br>With a pale, transparent taste<br><br>Even though it's fine to smile and say "Yeah, that's right",                 |
 | 僕は君を待っている                                                                                                                                   | Boku wa kimi wo matteiru                                                                                                                                                                                                                                                     | I'm waiting for you                                                                                                                                                                                                                                                                                          |
