--- a/(2023) Magic Lantern/01. The Portrait of Summer.md
+++ b/(2023) Magic Lantern/01. The Portrait of Summer.md
@@ -1,7 +1,7 @@
 夏の肖像 | Natsu no Shouzou
-#### [SakuraWindsS](https://docs.google.com/document/d/1NArzwf94kimzr371iZBPELcmeJYdaRRXOLm2Sw83VWQ/)
+#### Lyrics
 
-| Japanese                                                                                                                                                       | Romanji                                                                                                                                                                                                                                                                                               | English                                                                                                                                                                                                                                                                                                                                                                  |
+| Japanese                                                                                                                                                       | Romanji                                                                                                                                                                                                                                                                                               | [SakuraWindsS](https://docs.google.com/document/d/1NArzwf94kimzr371iZBPELcmeJYdaRRXOLm2Sw83VWQ/)                                                                                                                                                                                                                                                                         |
 | -------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | だからもっと踊るように<br><br>ほろりほろり落ちるように<br><br>さよならは花咲くように<br><br>それは夏の木漏れ日のよう                                                                                         | Dakara motto odoru you ni<br><br>Horori horori ochiru you ni<br><br>Sayonara wa hanasaku you ni<br><br>Sore wa natsu no komorebi no you                                                                                                                                                               | So we can dance more<br><br>Falling like petals<br><br>Goodbye blooms like a flower<br><br>It's like the summer sunlight filtering through the leaves                                                                                                                                                                                                                    |
 | 寂しい雨上がり、花を見つけて<br><br>ぽっかり空いたような貴方の心<br><br>少しだけ歩こうか　風の吹く間に<br><br>草のそよげば何となく誰かを待つ                                                                             | Sabishii ameagari, hana wo mitsukete<br><br>Pokkari aita you na anata no kokoro<br><br>Sukoshi dake arukou ka kaze no fuku ma ni<br><br>Kusa no soyogeba nanto naku dareka wo matsu                                                                                                                   | After a lonely rain, finding a flower<br><br>Your heart is completely empty<br><br>Why don't we walk a little, the wind blows all the while<br><br>While the grass sways, for some reason I'm waiting for someone                                                                                                                                                        |
