--- a/(2023) Magic Lantern/02. Miyakoochi.md
+++ b/(2023) Magic Lantern/02. Miyakoochi.md
@@ -1,7 +1,7 @@
 都落ち | Miyakoochi
-#### [zednet](https://docs.google.com/document/d/1WRANLjG6dy45OkDqNxA1_Zyb2c_8SSlKB3OcFwkb4SI/)
+#### Lyrics
 
-| Japanese                                                                 | Romanji                                                                                                                                                       | English                                                                                                                                                                                                                                    |
+| Japanese                                                                 | Romanji                                                                                                                                                       | [zednet](https://docs.google.com/document/d/1WRANLjG6dy45OkDqNxA1_Zyb2c_8SSlKB3OcFwkb4SI/)                                                                                                                                                 |
 | ------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | 花咲くや　赤ら引く頬に<br><br>さざなみ寄るは海<br><br>貴方は水際一人微笑むだけ<br><br>今、思い出に僕は都落ち       | Hana sakuya akara hiku hoho ni<br><br>Sazanami yoru wa umi<br><br>Anata wa mizugiwa hitori hohoemu dake<br><br>Ima, omoide ni boku wa miyakoochi              | Flowers bloom on your rosy cheeks<br><br>Wavelets rolling make a sea<br><br>On the water’s edge, you alone only smile<br><br>Now, in a memory I leave the capital                                                                          |
 | 鼻歌、綺麗だね<br><br>明日には往くんだぜ<br><br>海猫が鳴いたね<br><br>鳥でも泣くんだね                  | Hanauta, kirei da ne<br><br>Asu ni wa yuku n da ze<br><br>Umineko ga naita ne<br><br>Tori de mo naku n da ne                                                  | The humming sounds nice, doesn’t it?<br><br>I’m leaving tomorrow<br><br>The black-tailed gulls cried out, didn’t they<br><br>And even the other birds are crying                                                                           |
