--- a/(2023) Magic Lantern/03. Bremen.md
+++ b/(2023) Magic Lantern/03. Bremen.md
@@ -1,7 +1,7 @@
 ブレーメン | Bremen
-#### [Glens / Night Deer Translations](https://twitter.com/NightDeerTL)
+#### Lyrics
 
-| Japanese                                                                                                                                               | Romanji                                                                                                                                                                                                                                                                                     | English                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
+| Japanese                                                                                                                                               | Romanji                                                                                                                                                                                                                                                                                     | [Glens / Night Deer Translations](https://twitter.com/NightDeerTL)                                                                                                                                                                                                                                                                                                                                                                                                              |
 | ------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | ねぇ考えなくてもいいよ<br><br>口先じゃ分かり合えないの<br><br>この音に今は乗ろうよ<br><br>忘れないでいたいよ<br><br>身体は無彩色　レイドバック<br><br>ただうねる雨音でグルーヴ<br><br>ずっと二人で暮らそうよ<br><br>この夜の隅っこで         | Ne kangaenakute moii yo<br><br>Kuchisaki ja wakari aenai no<br><br>Kono oto ni ima wa norō yo<br><br>Wasurenaideitai yo, Oh oh<br><br>Karada wa musaishoku re ido bakku<br><br>Tada uneru amaoto de gurūvu<br><br>Zutto futari de kurasō yo<br><br>Kono yoru no sumikko de                  | Hey, you don't have to rack your brains out<br><br>'Cause you see, we can't get each other with just words<br><br>For now, let's lose ourselves in this sound<br><br>'Cause I don't ever want to forget this<br><br>My body is achromatic, feeling laidback<br><br>I'm getting on the groove with just the sound of the surging rainfall<br><br>Hey, let's live together and forever<br><br>At the corner of this night                                                         |
 | ねぇ不甲斐ない僕らでいいよ<br><br>って誘ったのは君じゃないの<br><br>理屈だけじゃつまらないわ<br><br>まだ時間が惜しいの？<br><br>練り歩く景色を真空パック<br><br>踏み鳴らす足音でグルーヴ<br><br>まるで僕らはブレーメン<br><br>たった二人だけのマーチ | Nee fugainai bokura de ii yo<br><br>tte sasotta no wa kimi janai no<br><br>Rikutsu dake ja tsumaranai wa<br><br>Mada jikan ga oshii no? Oh oh<br><br>Neriaruku keshiki wo shinkūpakku<br><br>Fuminarasu ashioto de gurūvu<br><br>Marude bokura wa burēmen<br><br>Tatta futari dake no machi | "Hey, you see, it's okay to be the nobody that we are"<br><br>Weren't you the one who enticed me with these words?<br><br>A life with nothing but logics is so vapid<br><br>Do you still think that this is a waste of time?<br><br>Stuffing in a vacuum pack the scenery we see as we're parading around,<br><br>Grooving with the sound we make as we walk and stomp the ground,<br><br>It's just like we’re the town musicians of Bremen– We have the march all to ourselves |
