--- a/(2023) Magic Lantern/04. Chinokate.md
+++ b/(2023) Magic Lantern/04. Chinokate.md
@@ -1,7 +1,7 @@
 チノカテ | Chinokate
-#### [Glens / Night Deer Translations](https://twitter.com/NightDeerTL)
+#### Lyrics
 
-| Japanese                                                                                                               | Romanji                                                                                                                                                                                                                         | English                                                                                                                                                                                                                                                                                                             |
+| Japanese                                                                                                               | Romanji                                                                                                                                                                                                                         | [Glens / Night Deer Translations](https://twitter.com/NightDeerTL)                                                                                                                                                                                                                                                  |
 | ---------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 夕陽を呑み込んだ<br><br>コップがルビーみたいだ<br><br>飲み掛けの土曜の生活感を<br><br>テーブルに置いて                                                        | Yūhi o nomikonda<br><br>Koppu ga rubi- mitai da<br><br>Nomikake no doyō no seikatsukan o<br><br>Te-buru ni oite                                                                                                                 | The glass that swallowed the sunset<br><br>Looks like a ruby<br><br>I left on the table<br><br>The half-drank essence of my saturday life                                                                                                                                                                           |
 | 花瓶の白い花<br><br>優しすぎて枯れたみたいだ<br><br>本当に大事だったのに<br><br>そろそろ変えなければ                                                         | Kabin no shiroi hana<br><br>Yasashisugite kareta mitai da<br><br>Hontōni daiji datta noni<br><br>Sorosoro kaenakereba                                                                                                           | The white flower in the vase<br><br>Seems to have withered because it was too kind<br><br>It was truly precious<br><br>But I guess it's time to replace it…                                                                                                                                                         |
