--- a/(2023) Magic Lantern/06. Howl At The Moon.md
+++ b/(2023) Magic Lantern/06. Howl At The Moon.md
@@ -1,7 +1,7 @@
 月に吠える | Tsuki ni Hoeru
-#### [Glens / Night Deer Translations](https://twitter.com/NightDeerTL)
+#### Lyrics
 
-| Japanese                                                                                                                                                    | Romanji                                                                                                                                                                                                                                                                                                                            | English                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
+| Japanese                                                                                                                                                    | Romanji                                                                                                                                                                                                                                                                                                                            | [Glens / Night Deer Translations](https://twitter.com/NightDeerTL)                                                                                                                                                                                                                                                                                                                                                                                       |
 | ----------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 路傍の月に吠える<br><br>影一つ町を行く<br><br>満ちることも知らないで<br><br>夜はすっと深くまで                                                                                                 | Robō no tsuki ni hoeru<br><br>Kage hitotsu machi o yuku<br><br>Michiru koto mo shiranaide<br><br>Yoru wa sutto fukaku made                                                                                                                                                                                                         | I'm howling at the moon by the roadside<br><br>I walk through the town,<br><br>Not even noticing that the moon is waxing<br><br>Without anyone noticing, the night swiftly sinks into the deep                                                                                                                                                                                                                                                           |
 | 気が付けば人留まり<br><br>この顔を眺めている<br><br>おれの何がわかるかと<br><br>獣の振りをする                                                                                                 | Ki ga tsukeba hitodamari<br><br>Kono kao o nagameteru<br><br>Ore no nani ga wakaru ka to<br><br>Kedamono no furi o suru                                                                                                                                                                                                            | When I come to my senses, I notice that people around me are standing still<br><br>They're looking at my face<br><br>"Quit acting like you know me!"<br><br>I bark at them, pretending to be a beast                                                                                                                                                                                                                                                     |
