--- a/(2023) Magic Lantern/07. 451.md
+++ b/(2023) Magic Lantern/07. 451.md
@@ -1,7 +1,7 @@
 451 | 451
-#### taru
+#### Lyrics
 
-| Japanese                                                                                   | Romanji                                                                                                                                                                                         | English                                                                                                                                                                                                                              |
+| Japanese                                                                                   | Romanji                                                                                                                                                                                         | taru                                                                                                                                                                                                                                 |
 | ------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | あの太陽を見てた<br><br>深く燃えてる<br><br>見れば胸の辺りが少し燃えてる<br><br>道を行く誰かが声を上げた<br><br>「見ろよ、変な男」と笑いながら    | Ano taiyō o miteta<br><br>Fukaku moeteru<br><br>Mireba mune no atari ga sukoshi moeteru<br><br>Michi o yuku dareka ga koe o ageta<br><br>" miro yo, henna otoko" to warai nagara                | I was looking at that sun burning intensely<br><br>When I did, someplace in my chest started to burn a little<br><br>Someone passing by the road raised their voice,<br><br>"Look! What a peculiar man," and as they said, laughing— |
 | 指の先で触れた紙が一つ遂に燃えた                                                                           | Yubi no saki de fureta kami ga hitotsu tsuini moeta                                                                                                                                             | —the paper I had touched with the ends of my fingers finally caught a flame                                                                                                                                                          |
