--- a/(2023) Magic Lantern/09. Matasaburo.md
+++ b/(2023) Magic Lantern/09. Matasaburo.md
@@ -1,7 +1,7 @@
 又三郎 | Matasaburo
-#### [Glens / Night Deer Translations](https://twitter.com/NightDeerTL)
+#### Lyrics
 
-| Japanese                                                                                                           | Romanji                                                                                                                                                                                                                                       | English                                                                                                                                                                                                                                                                                                                      |
+| Japanese                                                                                                           | Romanji                                                                                                                                                                                                                                       | [Glens / Night Deer Translations](https://twitter.com/NightDeerTL)                                                                                                                                                                                                                                                           |
 | ------------------------------------------------------------------------------------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 水溜りに足を突っ込んで<br><br>貴方は大きなあくびをする<br><br>酷い嵐を呼んで欲しいんだ<br><br>この空も吹き飛ばすほどの                                            | Mizutamari ni ashi o tsukkonde<br><br>anata wa ōkina akubi o suru<br><br>Hidoi arashi o yonde hoshii'n da<br><br>Kono sora mo fuki-tobasu hodo no                                                                                             | When you step into a pool of water,<br><br>You let out a big yawn<br><br>I want you to summon a storm so fierce<br><br>That will blow away even this sky                                                                                                                                                                     |
 | 風を待っていたんだ<br><br>何もない生活はきっと退屈過ぎるから<br><br>風を待っていたんだ<br><br>風を待っていたんだ                                               | Kaze o matte-ita'n da<br><br>Nani mo nai seikatsu wa kitto taikutsu sugiru kara<br><br>Kaze o matte-ita'n da<br><br>Kaze o matte-ita'n da                                                                                                     | I was waiting for the wind<br><br>Because I'm sure an empty life would be too boring<br><br>I was waiting for the wind<br><br>I was waiting for the wind                                                                                                                                                                     |
