--- a/(2023) Magic Lantern/11. The Old Man and the Sea.md
+++ b/(2023) Magic Lantern/11. The Old Man and the Sea.md
@@ -1,7 +1,7 @@
 老人と海 | Roujin to Umi
-#### [Glens / Night Deer Translations](https://twitter.com/NightDeerTL)
+#### Lyrics
 
-| Japanese                                                                                                                   | Romanji                                                                                                                                                                                                                             | English                                                                                                                                                                                                                                                                                                                              |
+| Japanese                                                                                                                   | Romanji                                                                                                                                                                                                                             | [Glens / Night Deer Translations](https://twitter.com/NightDeerTL)                                                                                                                                                                                                                                                                   |
 | -------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | 靴紐が解けてる　木漏れ日は足を舐む<br><br>息を吸う音だけ聞こえてる<br><br>貴方は今立ち上がる　古びた椅子の上から<br><br>柔らかい麻の匂いがする                                        | Kutsu himo ga hodoketeru komorebi wa ashi o namu<br><br>Iki o suu oto dake kikoeteru<br><br>Anata wa ima tachiagaru furubita isu no ue kara<br><br>Yawarakai asa no nioi ga suru                                                    | Your shoelaces are undone<br>And the sunlight is beaming down through the trees, licking your feet<br><br>I can only hear the sound of your breathing<br><br>Right now, you're standing up from above that old chair,<br><br>I can smell the scent of some soft hemp                                                                 |
 | 遥か遠くへ　まだ遠くへ<br><br>僕らは身体も脱ぎ去って<br><br>まだ遠くへ　雲も越えてまだ向こうへ<br><br>風に乗って<br><br>僕の想像力という重力の向こうへ<br><br>まだ遠くへ　まだ遠くへ<br><br>海の方へ | Haruka tōku e mada tōku e<br><br>Bokura wa karada mo nugi satte<br><br>Mada tōku e kumo mo koete mada mukō e<br><br>Kaze ni notte<br><br>Boku no sōzōryoku toiu jūryoku no mukō e<br><br>Mada tōku e mada tōku e<br><br>Umi no hō e | Far, far away into the distance, let's go even farther away<br><br>Taking off and leaving behind even our bodies,<br><br>Let's go even farther away, to beyond the clouds<br><br>We'll ride the wind<br><br>And go beyond the gravity that is my imagination<br><br>Let's go far away, even farther away <br><br>To where the sea is |
