--- a/(2023) Magic Lantern/12. Sayonara Morten.md
+++ b/(2023) Magic Lantern/12. Sayonara Morten.md
@@ -1,7 +1,7 @@
 さよならモルテン | Sayonara Morten
-#### [theyleaveshadows](https://iquixsubs.wordpress.com/2023/04/08/yourshika-goodbye-morten-sayonara-moruten-%E3%81%95%E3%82%88%E3%81%AA%E3%82%89%E3%83%A2%E3%83%AB%E3%83%86%E3%83%B3-english-translation-romaji/)
+#### Lyrics
 
-| Japanese                                                                                                                                           | Romanji                                                                                                                                                                                                                                                                                     | English                                                                                                                                                                                                                                                                                                             |
+| Japanese                                                                                                                                           | Romanji                                                                                                                                                                                                                                                                                     | [theyleaveshadows](https://iquixsubs.wordpress.com/2023/04/08/yourshika-goodbye-morten-sayonara-moruten-%E3%81%95%E3%82%88%E3%81%AA%E3%82%89%E3%83%A2%E3%83%AB%E3%83%86%E3%83%B3-english-translation-romaji/)                                                                                                       |
 | -------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 借りた本を片手に持って<br><br>川沿いの歩道を行く<br><br>読み終わりまであと2ページ<br><br>その先が知りたくない                                                                                | Karita hon wo katate ni motte<br><br>Kawazoi no hodou wo yuku<br><br>Yomi owari made ato ni peeji<br><br>Sono saki ga shiritakunai                                                                                                                                                          | With my borrowed book held in my hand,<br><br>I make my way down the footpath along the river<br><br>Only two pages ’till I’m done reading<br><br>I don’t wanna know what happens next                                                                                                                              |
 | 鳥に乗って旅する少年<br><br>どこまでも北へ行く<br><br>相棒はガチョウのモルテン<br><br>そんな小説を読む                                                                                    | Tori ni notte tabi suru shounen<br><br>Doko made mo kita e yuku<br><br>Aibou wa gachou no moruten<br><br>Sonna shousetsu wo yomu                                                                                                                                                            | It’s about a boy who goes on a journey<br><br>Heading endlessly north on the back of a bird,<br><br>His trusty pal is a goose named Morten —<br><br>That’s the kind of story I’m reading                                                                                                                            |
