--- a/(2023) Magic Lantern/13. Isana.md
+++ b/(2023) Magic Lantern/13. Isana.md
@@ -1,7 +1,7 @@
 いさな | Isana
-#### OFFICIAL translation taken from TsukiNeko 2024 Live
+#### Lyrics
 
-| Japanese                                                                                            | Romanji                                                                                                                                                                                         | English                                                                                                                                                                                                                                          |
+| Japanese                                                                                            | Romanji                                                                                                                                                                                         | TsukiNeko 2024 Live                                                                                                                                                                                                                              |
 | --------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | あなたの胸びれ<br><br>窓辺を泳いで<br><br>柔らかに<br><br>溶けた琥珀のよう                                                   | Anata no munabire<br><br>Madobe o oyoide<br><br>Yawaraka ni<br><br>Toketa kohaku no yō                                                                                                          | Your pectoral fins<br><br>swim by the window,<br><br>looking like melted<br><br>and softened amber.                                                                                                                                              |
 | あなたの鼻先<br><br>背びれと口髭<br><br>静かなまなこは<br><br>まるで夜の                                                    | Anata no hanasaki<br><br>Sebire to kuchihige<br><br>Shizukana manako wa<br><br>Marude yoru no                                                                                                   | The tip of your nose,<br><br>your dorsal fin and mustache,<br><br>and your quiet eyes look like<br><br>they belong to the night.                                                                                                                 |
