--- a/(2023) Magic Lantern/14. Left-Right Confusion.md
+++ b/(2023) Magic Lantern/14. Left-Right Confusion.md
@@ -1,7 +1,7 @@
 左右盲 | Sayuumou
-#### [Glens / Night Deer Translations](https://twitter.com/NightDeerTL)
+#### Lyrics
 
-| Japanese                                                                                                                                              | Romanji                                                                                                                                                                                                                                                                                                                              | English                                                                                                                                                                                                                                                                                                                                                                                                             |
+| Japanese                                                                                                                                              | Romanji                                                                                                                                                                                                                                                                                                                              | [Glens / Night Deer Translations](https://twitter.com/NightDeerTL)                                                                                                                                                                                                                                                                                                                                                  |
 | ----------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 君の右手は頬を突いている<br><br>僕は左手に温いマグカップ<br><br>君の右眉は少し垂れている<br><br>朝がこんなにも降った                                                                                | Kimi no migite wa hoho wo tsuiteiru<br><br>Boku wa hidarite ni nurui magukappu<br><br>Kimi no migi mayu wa sukoshi tareteiru<br><br>Asa ga konnani mo futta                                                                                                                                                                          | You're poking my cheeks with your right hand<br><br>While I'm holding a warm mug with my left hand<br><br>Your right eyebrow looks a little droopy<br><br>It's hard to believe how many mornings have arrived                                                                                                                                                                                                       |
 | 一つでいい<br><br>散らぬ牡丹の一つでいい<br><br>君の胸を打て<br><br>心を亡れるほどの幸福を[[#^1]]<br>一つでいいんだ<br><br>右も左もわからぬほどに手探りの夜の中を<br><br>一人行くその静けさを<br><br>その一つを教えられたなら          | Hitotsu de ii<br><br>Chiranu botan no hitotsu de ii<br><br>Kimi no munewōte<br><br>Kokoro wasureru hodo no kōfuku wo<br><br>Hitotsu de ii n da<br><br>Migi mo hidari mo wakaranu hodo ni tesaguri no yoru no naka wo<br><br>Hitori iku sono shizukesa wo<br><br>Sono hitotsu wo oshierareta nara                                     | I'm content with just one thing<br><br>Just one peony whose flowers never fall<br><br>A happiness that touches you,<br><br>And makes you forget even your heart<br><br>Really, I'm fine with just one thing<br><br>A night so dark and deep you can't tell left from right<br><br>The stillness of going on a journey alone<br><br>If I could convey to you even one of these things…                               |
