--- a/(2023) Magic Lantern/15. Algernon.md
+++ b/(2023) Magic Lantern/15. Algernon.md
@@ -1,7 +1,7 @@
 アルジャーノン | Algernon
-#### [Relapse](https://twitter.com/AmRelapse)
+#### Lyrics
 
-| Japanese                                                                                                                                 | Romanji                                                                                                                                                                                                                                                       | English                                                                                                                                                                                                                                                                                                                          |
+| Japanese                                                                                                                                 | Romanji                                                                                                                                                                                                                                                       | [Relapse](https://twitter.com/AmRelapse)                                                                                                                                                                                                                                                                                         |
 | ---------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 貴方はどうして僕に心をくれたんでしょう<br><br>貴方はどうして僕に目を描いたんだ<br><br>空より大きく　雲を流す風を呑み込んで<br><br>僕のまなこはまた夢を見ていた                                              | Anata wa dōshite boku ni kokoro o kureta n deshō<br><br>Anata wa dōshite boku ni me o kaita n da<br><br>Sora yori ōkiku kumo o nagasu kaze o nomikonde<br><br>Boku no manako wa mata yume o miteta                                                            | Why did you give me my heart?<br><br>Why did you paint my eyes?<br><br>Greater than the sky, swallowing the winds that sweeps away the clouds<br><br>My eyes are seeing a dream once again                                                                                                                                       |
 | 裸足のままで                                                                                                                                   | Hadashi no mama de                                                                                                                                                                                                                                            | Still on barefoot…                                                                                                                                                                                                                                                                                                               |
