--- a/(2023) Magic Lantern/16. First Night.md
+++ b/(2023) Magic Lantern/16. First Night.md
@@ -1,7 +1,7 @@
 第一夜 | Daiichiya
-#### [SakuraWindsS](https://docs.google.com/document/d/1NArzwf94kimzr371iZBPELcmeJYdaRRXOLm2Sw83VWQ)
+#### Lyrics
 
-| Japanese                                                                                                                                    | Romanji                                                                                                                                                                                                                                                                           | English                                                                                                                                                                                                                                                                                                                                                   |
+| Japanese                                                                                                                                    | Romanji                                                                                                                                                                                                                                                                           | [SakuraWindsS](https://docs.google.com/document/d/1NArzwf94kimzr371iZBPELcmeJYdaRRXOLm2Sw83VWQ)                                                                                                                                                                                                                                                           |
 | ------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 貴方だけを憶えている<br><br>雲の影が流れて往く<br><br>言葉だけが溢れている<br><br>想い出は夏風、揺られながら                                                                          | Anata dake o oboeteiru<br><br>Kumo no kage ga nagarete yuku<br><br>Kotoba dake ga afureteiru<br><br>Omoide wa natsu kaze, yurare nagara                                                                                                                                           | I only remember you<br><br>The shadows of the clouds swept across the ground<br><br>Overflowing with only your words<br><br>While my memories, like the summer breeze, gently swayed                                                                                                                                                                      |
 | 朝目が覚めて歯を磨く<br><br>散歩の前に朝ご飯<br><br>窓の向こうにふくれ雲<br><br>それを手帳に書き留めて<br><br>歌う木立を眺めます<br><br>通りすがりの風が運んだ<br><br>花の香りに少しだけ春かと思いました                | Asa me ga samete ha o migaku<br><br>Sanpo no mae ni asa gohan<br><br>Mado no mukō ni fukure kumo<br><br>Sore o techō ni kakitomete<br><br>Utau kodachi o nagamemasu<br><br>Tōrisugari no kaze ga hakonda<br><br>Hana no kaori ni sukoshi dake haru ka to omoimashita              | Waking in the morning, I brush my teeth<br><br>Eating breakfast before I walk<br><br>Looking at the puffy clouds beyond my window<br><br>I write it all down in my notebook<br><br>Gazing at the singing grove<br><br>The scent of flowers carried by the passing wind<br><br>Reminded me a little of the spring                                          |
