--- a/(2018) A Loser Doesn’t Need An Encore/05. Falling.md
+++ b/(2018) A Loser Doesn’t Need An Encore/05. Falling.md
@@ -1,7 +1,7 @@
 落下 | Rakka
-#### [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/10/02/yorushika-rakka/)
+#### Lyrics
 
-| Japanese                                                                                                                                        | English                                                                                                                                                                                                                                                                                                                                                   |
+| Japanese                                                                                                                                        | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/10/02/yorushika-rakka/)                                                                                                                                                                                                                                                                        |
 | ----------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 最近、よく夢を見る。<br><br>夢の中で自分は一匹の夜鷹だ。<br><br>高く、遠くへ飛び上がろうとするも、ある時は雲を抜けた辺りで、<br><br>ある時は月にも触れそうな頃に、羽ばたく腕はついに力尽き、落下を始め。<br><br>逆さまの地平線と鱗雲を、夕陽が淡く染めている。 | Lately, I’ve been dreaming a lot.<br><br>In the dream, I am a single nighthawk. [[#^1]]<br><br>Though I fly high and far, just as I’ve pierced through the clouds,<br><br>As I’m about to touch the moon, my flapping arms suddenly tire and I begin falling.<br><br>The upside-down horizon and cirrocumulus clouds are lightly dyed by the setting sun. |
 | その直前に、僕は盲目の少年で、いつか聞いた歌を口ずさんでいる。<br><br>頬を撫でる夏の風と、世界に溢れた音だけを頼り街を歩く。                                                                              | Just before that, I am a blind boy, humming a song I once heard.<br><br>Relying only on the summer wind stroking my cheek and the sounds that the world is overflowing with, I walk through the town.                                                                                                                                                     |
