--- a/(2019) Elma/02. Just Sorrow.md
+++ b/(2019) Elma/02. Just Sorrow.md
@@ -1,7 +1,7 @@
 憂一乗 | Yuu Ichijou
-#### [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/)
+#### Lyrics
 
-| Japanese                                                                                                                         | Romanji                                                                                                                                                                                                                                             | English                                                                                                                                                                                                                                                                                                                                                                                                                              |
+| Japanese                                                                                                                         | Romanji                                                                                                                                                                                                                                             | [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/)                                                                                                                                                                                                                                                                                                                                           |
 | -------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | 湖の底にいるみたいだ<br><br>呼吸の一つが喉に絡んだ<br><br>気泡を吐き出して数秒、やっと足が着いた<br><br>柔らかな泡の感触がした                                                      | Mizuumi no soko ni iru mitai da<br><br>Kokyū no hitotsu ga nodo ni karanda<br><br>Kihō o hakidashite sū byō, yatto ashi ga tsuita<br><br>Yawarakana doro no kanshoku ga shita                                                                       | I think I’m at the bottom of a river<br><br>A single breath constricts my throat <br><br>Watching the air escape my mouth for a few seconds, my feet finally touched the ground<br><br>I felt the gentle bubbles                                                                                                                                                                                                                     |
 | ずっとずっとずっとずっとずっと<br><br>君を追っているだけで                                                                                                | Zutto zutto zutto zutto zutto<br><br>Kimi o otteiru dake de                                                                                                                                                                                         | For a long time now<br><br>Just by chasing after you                                                                                                                                                                                                                                                                                                                                                                                 |
