--- a/(2019) Elma/03. Evening Calm, Some Place, Fireworks.md
+++ b/(2019) Elma/03. Evening Calm, Some Place, Fireworks.md
@@ -1,7 +1,7 @@
 夕凪、某、花惑い | Yuunagi, Nanigashi, Hanamadoi
-#### [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/)
+#### Lyrics
 
-| Japanese                                                                         | Romanji                                                                                                                                                                  | English                                                                                                                                                                                                                                   |
+| Japanese                                                                         | Romanji                                                                                                                                                                  | [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/)                                                                                                                                                |
 | -------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 夏になる前にこの胸に散る花火を書いた<br><br>夜が来るから明後日の方ばかりを見てる                                     | Natsu ni naru mae ni kono mune ni chiru hanabi o kaita<br><br>Yoru ga kuru kara asatte no hō bakari o miteru                                                             | I wrote about the fireworks in my heart before the seasons turned to summer<br><br>The night is about to fall, and the day after tomorrow is all that I see                                                                               |
 | 口に出してもう1回<br><br>八月某日を思い出して<br><br>僕には言い足りないことばかりだ                               | Kuchi ni dashite mō ikkai<br><br>Hachigatsu bō jitsu o omoidashite<br><br>Boku ni wa ii tarinai koto bakari da                                                           | I’ll say it one more time<br><br>I’ll recall that one August day<br><br>They’re the only things I can never speak enough of                                                                                                               |
@@ -11,6 +11,6 @@
 | 何もいいことないんだ<br><br>この世は僕には難解だった<br><br>君が教えなかったことばかりだ                             | Nan ni mo ii koto nai n da<br><br>Konoyo wa boku ni wa nankai datta<br><br>Kimi ga oshienakatta koto bakari da                                                           | There’s nothing good left<br><br>This world was difficult for me to understand<br><br>It’s just full of things you never taught me                                                                                                        |
 | ピアノを弾いてたホール<br><br>あのカフェももう無いんだ<br><br>僕らを貶す奴らを殺したい<br><br>君ならきっと笑ってくれる          | Piano o hiiteta ho-ru<br><br>Ano kafe mo mō nai n da<br><br>Bokura o kenasu yatsura o koroshitai<br><br>Kimi nara kitto warattekureru                                    | We played piano in that hall<br><br>That cafe doesn’t exist anymore<br><br>I want to kill the two we talked so badly about<br><br>If you were here, you’d definitely laugh at that                                                        |
 | このままじゃまだ足りない<br><br>僕ら花惑う風の中を<br><br>思い出すほどに苦しいのさ<br><br>夏が来る夢を見る<br><br>心に穴が空く  | Kono mama ja mada tarinai<br><br>Bokura hana madou kaze no naka o<br><br>Omoidasu hodo ni kurushii no sa<br><br>Natsu ga kuru yume o miru<br><br>Kokoro ni ana ga aku    | How things are now still isn’t enough<br><br>I want us to be lost in a breeze obfuscated by flowers<br><br>The mere act of remembering is painful<br><br>I dream that summer will come<br><br>And with that, a hole opened up in my heart |
-| 唄歌うだけじゃ足りない<br><br>君に茜差す日々の歌を<br><br>美しい夜が知りたいのだ<br><br>花惑う夏を待つ <br><br>君を差す月明かり | Uta utau dake ja tarinai<br><br>Kimi ni akane sasu hibi no uta o<br><br>Utsukushii yoru ga shiritai no da<br><br>Hana madou natsu o matsu<br><br>kimi ni sasu tsukiakari | Singing songs alone won’t be enough <br><br>I want to sing of glowing red days to you<br><br>I want to know what a beautiful night is like<br><br>I wait for a summer of fireworks<br><br>You’re illuminated by the moonlight             |
+| 唄歌うだけじゃ足りない<br><br>君に茜差す日々の歌を<br><br>美しい夜が知りたいのだ<br><br>花惑う夏を待つ <br><br>僕に差す月明かり | Uta utau dake ja tarinai<br><br>Kimi ni akane sasu hibi no uta o<br><br>Utsukushii yoru ga shiritai no da<br><br>Hana madou natsu o matsu<br><br>boku ni sasu tsukiakari | Singing songs alone won’t be enough <br><br>I want to sing of glowing red days to you<br><br>I want to know what a beautiful night is like<br><br>I wait for a summer of fireworks<br><br>I am illuminated by the moonlight               |
 ##### Notes
 >
