--- a/(2019) That's Why I Gave Up On Music/14. That's Why I Gave Up On Music.md
+++ b/(2019) That's Why I Gave Up On Music/14. That's Why I Gave Up On Music.md
@@ -1,7 +1,7 @@
 だから僕は音楽を辞めた | Dakara Boku wa Ongaku wo Yameta
-#### [EJ/bluepenguin](https://ejtranslations.wordpress.com/2019/04/09/yorushika-dakara-boku-wa-ongaku-o-yameta/)
+#### Lyrics
 
-| Japanese                                                                                                                     | Romanji                                                                                                                                                                                                                                                      | English                                                                                                                                                                                                                                                                                                                       |
+| Japanese                                                                                                                     | Romanji                                                                                                                                                                                                                                                      | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2019/04/09/yorushika-dakara-boku-wa-ongaku-o-yameta/)                                                                                                                                                                                                                   |
 | ---------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 考えたってわからないし<br><br>青空の下、君を待った<br><br>風が吹いた正午、昼下がりを抜け出す想像<br><br>ねぇ、これからどうなるんだろうね<br><br>進め方教わらないんだよ<br><br>君の目を見た 何も言えず僕は歩いた | kangaetatte wakaranai shi<br><br>aozora no shita, kimi o matta<br><br>kaze ga fuita shougo, hirusagari o nukedasu souzou<br><br>nee, kore kara dou naru n’darou ne<br><br>susumekata osowaranai n’da yo<br><br>kimi no me o mita nani mo iezu boku wa aruita | I’ve thought about it, but I still don’t understand<br><br>Under the blue sky, I waited for you<br><br>On that breezy afternoon, my imagination escaped the confines of the day<br><br>Hey, where do I go from here?<br><br>No one has told me how to proceed<br><br>I looked into your eyes and without a word I walked away |
 | 考えたってわからないし<br><br>青春なんてつまらないし<br><br>辞めた筈のピアノ、机を弾く癖が抜けない<br><br>ねぇ、将来何してるだろうね<br><br>音楽はしてないといいね<br><br>困らないでよ              | kangaetatte wakaranai shi<br><br>seishun nante tsumaranai shi<br><br>yameta hazu no PIANO, tsukue o hiku kuse ga nukenai<br><br>nee, shourai nani shite’ru darou ne<br><br>ongaku wa shite’nai to ii ne<br><br>komaranaide yo                                | I’ve thought about it, but I still don’t understand<br><br>Youth is so boring<br><br>I tried to give up piano, but I can’t break the habit of playing on my desk [[#^1]]<br><br>Hey, what will I do in the future?<br><br>It shouldn’t be music, right?<br><br>Don’t worry                                                    |
