--- a/(2020) Plagiarism/11. Escape.md
+++ b/(2020) Plagiarism/11. Escape.md
@@ -1,7 +1,7 @@
 逃亡 | Toubou
-#### [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)
+#### Lyrics
 
-| Japanese                                                                                              | Romanji                                                                                                                                                                                                                                | English                                                                                                                                                                                                                                                                                       |
+| Japanese                                                                                              | Romanji                                                                                                                                                                                                                                | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                                                                                                                     |
 | ----------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 夏の匂いがしてた<br><br>あぜ道、ひとつ入道雲<br><br>夜が近づくまで今日は歩いてみようよ<br><br>隣の町の夜祭りに行くんだ                               | Natsu no nioi ga shiteta<br><br>Azemichi, hitosu nyuudougumo<br><br>Yoru ga chikazuku made kyō wa aruitemiyou yo<br><br>Tonari no machi no yomatsuri ni iku n da                                                                       | It was smelling like summer<br><br>A footpath in the rice field, one summer cumulonimbus<br><br>Today let's try walking until the night comes<br><br>We're going to the nighttime festival in the town over                                                                                   |
 | 温い夜、誘蛾灯の日暮、鼻歌、軒先の風鈴、<br><br>坂道を下りた向こう側、祭り屋台の憧憬<br><br>夜が近付くまで今日は歩いてみようよ<br><br>上を向いて歩いた、花が夜空に咲いてる     | Nurui yoru, yūgatō no higurashi, hanauta, nokisaki no fūrin,<br><br>Sakamichi o orita mukōgawa, matsuri yatai no dōkei<br><br>Yoru ga chikazuku made kyō wa aruitemiyou yo<br><br>Ue o muite aruita, hana ga yozora ni saiteru         | Lukewarm night, light trap twilight[[#^1]], humming, wind chimes on the eaves,<br><br>Down the other side of the street hill, yearning for the festival stall<br><br>Today let's try walking until the night comes<br><br>We looked upwards and walked, flowers are blooming in the night sky |
