--- a/(2023) Magic Lantern/05. Snow Country.md
+++ b/(2023) Magic Lantern/05. Snow Country.md
@@ -1,7 +1,7 @@
 雪国 | Yukiguni
-#### OFFICIAL translation taken from TsukiNeko 2024 Live
+#### Lyrics
 
-| Japanese                                                                                    | Romanji                                                                                                                                                                                                                | English                                                                                                                                                                                                                                                                                   |
+| Japanese                                                                                    | Romanji                                                                                                                                                                                                                | TsukiNeko 2024 Live                                                                                                                                                                                                                                                                       |
 | ------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 国境の長いトンネルを抜けると雪国は<br><br>底冷えの夜の静けさを白く帯びている<br><br>雪景の古い街並みを横目に雪国は<br><br>貴方との春の思い出がただ蔓延っている | Kokkyō no nagai tonneru o nukeruto yukiguni wa<br><br>Sokobi e no yoru no shizukesa o shiroku obiteiru<br><br>Sekkei no furui machinami o yokome ni yukiguni wa<br><br>Anata to no haru no omoide ga tada habikotteiru | Coming out of the long tunnel on the border, we find the snow country<br><br>taking on the stillness of a bone-chilly night to lay white.<br><br>Casting a sidelong glance at the snowy old townscape,<br><br>the snow country is just imbued with the memory of the springtime with you. |
 | 僕の躊躇いが月に被さってまるで海の底ね<br><br>ぼうと座って水面に映った僕らを見ている                                              | Boku no tamerai ga tsuki ni kabusatte marude umi no sokone<br><br>Bō to suwatte minamo ni utsutta bokura o miteiru                                                                                                     | My hesitation covers the moon and it's dark like the bottom of the sea.<br><br>Sitting in a daze, we're looking at our own reflections on the surface of the water.                                                                                                                       |
