--- a/(2023) Magic Lantern/08. Pas de deux.md
+++ b/(2023) Magic Lantern/08. Pas de deux.md
@@ -1,5 +1,5 @@
 パドドゥ | Pas de deux
-#### 
+#### Lyrics
 
 | Japanese                                                                                                                     | Romanji                                                                                                                                                                                                                                                                      | English |
 | ---------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------- |
